--- a/product/存储与CDN/日志服务/购买指南/计费概述.md
+++ b/product/存储与CDN/日志服务/购买指南/计费概述.md
@@ -81,16 +81,63 @@
 
 甲公司的网站每天有一亿次请求，平均一次请求会产生一条100字节的日志，一天共一亿条日志，日志量共约9.31GB。甲公司决定将 Nginx 访问日志上传到 CLS 的北京地域保存，使用标准存储保存15天，使用日志检索分析及告警功能，未使用数据加工、下载、消费及投递等功能。
 
-| 计费项           | 说明                                                         | 计量      | 单价             | 费用       |
-| ---------------- | ------------------------------------------------------------ | --------- | ---------------- | ---------- |
-| 写流量费用       | 使用 LogListener 上传日志会进行压缩，压缩后流量2.33GB。          | 2.33GB    | 0.18元/GB/日     | 0.419元/日 |
-| 标准索引流量费用 | 开启全文索引后，产生9.31GB索引流量。                           | 9.31GB    | 0.35元/GB/日     | 3.259元/日 |
-| 标准日志存储费用 | 每天上传2.33GB日志，保存15天后平均存储量34.95GB（2.33GB x 15天）。 | 34.95GB   | 0.0115元/GB/日   | 0.402元/日 |
-| 标准索引存储费用 | 每天产生9.31GB索引，保存15天后平均存储量139.65GB （9.31GB x 15天）。 | 139.65GB  | 0.0115元/GB/日   | 1.606元/日 |
-| 服务请求费用     | 使用 Loglistener 会批量上传，将产生10万次上传请求。              | 0.1百万次 | 0.15元/百万次/日 | 0.015元/日 |
-| 主题分区费用     | 业务日志峰值8MB/s，需要两个主题分区。                          | 2个       | 0.04元/个/日     | 0.08元/日  |
-
-**总计：5.781元/日**
+<table>
+<thead>
+<tr>
+<th>计费项</th>
+<th>说明</th>
+<th>计量</th>
+<th>单价</th>
+<th>费用</th>
+</tr>
+</thead>
+<tbody><tr>
+<td>写流量费用</td>
+<td>使用 LogListener 上传日志会进行压缩，压缩后流量2.33GB。</td>
+<td>2.33GB</td>
+<td>0.18元/GB/日</td>
+<td>0.419元/日</td>
+</tr>
+<tr>
+<td>标准索引流量费用</td>
+<td>开启全文索引后，产生9.31GB索引流量。</td>
+<td>9.31GB</td>
+<td>0.35元/GB/日</td>
+<td>3.259元/日</td>
+</tr>
+<tr>
+<td>标准日志存储费用</td>
+<td>每天上传2.33GB日志，保存15天后平均存储量34.95GB（2.33GB x 15天）。</td>
+<td>34.95GB</td>
+<td>0.0115元/GB/日</td>
+<td>0.402元/日</td>
+</tr>
+<tr>
+<td>标准索引存储费用</td>
+<td>每天产生9.31GB索引，保存15天后平均存储量139.65GB （9.31GB x 15天）。</td>
+<td>139.65GB</td>
+<td>0.0115元/GB/日</td>
+<td>1.606元/日</td>
+</tr>
+<tr>
+<td>服务请求费用</td>
+<td>使用 Loglistener 会批量上传，将产生10万次上传请求。</td>
+<td>0.1百万次</td>
+<td>0.15元/百万次/日</td>
+<td>0.015元/日</td>
+</tr>
+<tr>
+<td>主题分区费用</td>
+<td>业务日志峰值8MB/s，需要两个主题分区。</td>
+<td>2个</td>
+<td>0.04元/个/日</td>
+<td>0.08元/日</td>
+</tr>
+<tr>
+<td>总计</td>
+<td colspan=4>5.781元/日</td>
+</tr>
+</tbody></table>
 
 从计费项费用中可以发现，索引流量及索引存储费用占总费用比例最高达到84%，主要由以下几方面导致：
 
