--- a/product/互联网中间件/腾讯分布式服务框架/产品动态.md
+++ b/product/互联网中间件/腾讯分布式服务框架/产品动态.md
@@ -30,7 +30,7 @@
 <td><a href="https://cloud.tencent.com/document/product/649/15525">部署组管理</a></td> 
 </tr><tr>
 <td>网关监控能力优化</td>
-<td>网管监控添加网关自身监控指标，更加全面的监测网关节点及服务的运行状况。</td>
+<td>网关监控添加网关自身监控指标，更加全面的监测网关节点及服务的运行状况。</td>
 <td>2022-04-15</td>
 <td><a href="https://cloud.tencent.com/document/product/649/55289">网关监控</a></td> 
 </tr>
