--- a/product/互联网中间件/腾讯分布式服务框架/产品动态.md
+++ b/product/互联网中间件/腾讯分布式服务框架/产品动态.md
@@ -47,6 +47,12 @@
 <td><a href="https://cloud.tencent.com/document/product/649/46914">Kafka 链路追踪</a></td> 
 </tr>
 <tr>
+<td>监控大盘优化</td>
+<td>-</td>
+<td>2022-04-15</td>
+<td><a href="https://cloud.tencent.com/document/product/649/45975">服务监控</a></td> 
+</tr>
+<tr>
 <td>网关 SDK 默认关闭 Hytrixs</td>
 <td>-</td>
 <td>2022-04-15</td>
