--- a/product/安全服务/网站管家/常见问题/权限相关.md
+++ b/product/安全服务/网站管家/常见问题/权限相关.md
@@ -5,7 +5,7 @@
 >- 请使用账户主账号进行登录授权。
 >
 1. 登录 [访问管理控制台](https://console.cloud.tencent.com/cam)，在左侧导航中，选择选择**策略**。
-2. 在策略页面，单击**新建自定义策略**，选择**按照策略语法创建**。
+2. 在策略页面，单击**新建自定义策略**，选择**按策略语法创建**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/e5581b13437790adf08ea5c535fc19cd.png)
 3. 在选择策略模板页面，选择**空白模板**，单击**下一步**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/e85af922699096156da709db32b03950.png)
@@ -29,7 +29,7 @@
   ]
 }
 ```
-5. 单击**完成**，返回至策略页面，选择刚刚创建策略，单击操作列的**关联用户/用户组**。
+5. 单击**完成**，返回至策略页面，选择刚刚创建策略，单击操作列的**关联用户/组**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/4cfb9216de1b90f6f9b290394c8624cd.png)
-6. 在关联用户/用户组弹窗中，勾选所需的用户/组，单击**确定**。
+6. 在关联用户/组弹窗中，勾选所需的用户/组，单击**确定**。
 
