--- a/product/计算与网络/事件总线/购买指南/产品定价.md
+++ b/product/计算与网络/事件总线/购买指南/产品定价.md
@@ -6,7 +6,7 @@
 
 ### 投递事件费用详情
 
-投递到**自定义事件集**的事件，比如自定义应用、消息队列、数据库等业务事件，统一按照投递事件数量进行阶梯计费，具体价格如下:
+投递到**自定义事件集**的事件，例如自定义应用、消息队列、数据库等业务事件，统一按照投递事件数量进行阶梯计费，具体价格如下:
 
 <table><tr>
 <th rowspan="2"><nobr>计费阶梯</nobr></th>
@@ -42,4 +42,5 @@
 <td>3.12</td>
 </tr></table>
 
+#### 说明：
 每 64KB 大小的数据按 1 个事件计费，不足 64KB 按照 1 个事件统计。（例如，负载为 256KB 的数据按 4 个事件计费，负载为 220KB 的数据也按 4 个事件计费）
