--- a/product/计算与网络/事件总线/购买指南/产品定价.md
+++ b/product/计算与网络/事件总线/购买指南/产品定价.md
@@ -1,7 +1,7 @@
-## 概述
-按照事件集类型进行计费
-- **云服务事件集**：对于广州地域的云服务事件集，不计费
-- **自定义事件集**：各地域用户自建事件集，根据投递到事件集的事件数量进行计费
+
+事件总线（EventBridge）按照事件集类型进行计费。
+- **云服务事件集**：对于广州地域的云服务事件集，不计费。
+- **自定义事件集**：各地域用户自建事件集，根据投递到事件集的事件数量进行计费。
 
 
 ### 投递事件费用详情
