--- a/product/互联网中间件/腾讯分布式服务框架/操作指南/运维中心/监控/实例监控.md
+++ b/product/互联网中间件/腾讯分布式服务框架/操作指南/运维中心/监控/实例监控.md
@@ -12,12 +12,15 @@
 ### 查看实例监控指标
 
 实例监控展示了服务实例的请求量，错误率、响应耗时、响应耗时分布、HTTP 状态码的时序曲线。
+- 请求量
+- 错误率
+- 响应耗时：响应耗时中 p95 代表线上95%的请求耗时都小于某个时间。
+- 响应耗时分布：将鼠标放在散点图上，框选图表可查看请求详情。
+- HTTP 状态码
 ![](https://qcloudimg.tencent-cloud.cn/raw/672a8515b032a3a3a6184348b5f88531.png)
 
-
-
 在实例监控页面，可以进行以下操作：
-
+- 您可以在左侧实例列表，单击请求量、请求错误率或平均响应耗时旁的排序图标对实例进行正序或者倒序排序。
 - 您可以将光标移到曲线上，查看具体时刻的监控数据。
 - 您可以单击每条曲线右上角的![img](https://main.qcloudimg.com/raw/7d2ae79ec8e992ec9252d909e74423e9.png)添加多时段数据对比。
 - 您可以通过服务实例的请求错误率和耗时等指标判断实例是否有异常，若有异常您可以单击实例的“ID”，进入实例概览页面查看详情。
