--- a/product/视频服务/播放器/iOS端集成/定制开发/直播场景/使用文档.md
+++ b/product/视频服务/播放器/iOS端集成/定制开发/直播场景/使用文档.md
@@ -217,7 +217,7 @@ _txLivePlayer.recordDelegate = recordListener;
 1. 录制：配置时移时长、时移储存时长。
 2. 播放：时移获取元数据。
 
->? 时移功能处于公测申请阶段，如您需要可提交工单申请使用。
+>? 时移功能处于公测申请阶段，如您需要可 [提交工单](https://console.cloud.tencent.com/workorder) 申请使用。
 
 ### 8、延时调节
 腾讯云 SDK 的直播播放（LVB）功能，并非基于 ffmpeg 做二次开发， 而是采用了自研的播放引擎，所以相比于开源播放器，在直播的延迟控制方面有更好的表现，我们提供了三种延迟调节模式，分别适用于：秀场，游戏以及混合场景。
