--- a/product/计算与网络/事件总线/购买指南/欠费与停服说明.md
+++ b/product/计算与网络/事件总线/购买指南/欠费与停服说明.md
@@ -6,9 +6,7 @@
 事件总线 EventBridge 按照实际使用付费，采用 [按量计费（后付费）](https://cloud.tencent.com/document/product/555/9617) 方式。在每小时整点计算您上一小时的服务费用，并在当天零点完成全天费用统计，抵扣您的代金券或从您的账户余额中扣除，同时产生费用账单供您后续查询。
 
 ### 停服机制
-当您的账号欠费，您的事件总线服务将会停止。
-
-停服后，所有的事件总线自定义事件集资源将会有以下限制：
+当您的账号欠费，您的事件总线服务将会停止。停服后，所有的事件总线自定义事件集资源将会有以下限制：
 - 无法通过 API 或连接器向事件集投递事件。
 
 >! 欠费不影响云服务事件集正常使用，您的告警事件、审计事件仍可正常投递并完成推送。
