--- a/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
+++ b/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
@@ -549,6 +549,18 @@ effect:{
 <td>获取内置滤镜列表</td>
 </tr>
 <tr>
+<td>disable()</td>
+<td>-</td>
+<td>停用面部检测</td>
+<td>停用面部检测后，会返回未处理的视频画面</td>
+</tr>
+<tr>
+<td>enable()</td>
+<td>-</td>
+<td>恢复面部检测</td>
+<td></td>
+</tr>
+<tr>
 <td>async startRecord()</td>
 <td>-</td>
 <td>-</td>
