--- a/product/大数据与AI/数据开发平台WeData/操作指南/数据集成/实时同步/任务运维.md
+++ b/product/大数据与AI/数据开发平台WeData/操作指南/数据集成/实时同步/任务运维.md
@@ -1,4 +1,4 @@
-单击**任务运维**中的**离线运维**即可进入离线任务运维页面。
+单击**任务运维**中的**实时运维**即可进入实时任务运维页面。
 ## 实时运维列表
 ![](https://qcloudimg.tencent-cloud.cn/raw/6451b917ce09c6c74e1a5bfc1ca100db.png)
 
