--- a/product/大数据与AI/人体分析/产品概述.md
+++ b/product/大数据与AI/人体分析/产品概述.md
@@ -8,4 +8,4 @@
 指在给定图片中检测出人体位置的矩形框，识别人体的头部、肩部、手部、脚部等多个关键点，并返回高精度的人体坐标信息。支持多人体等复杂场景的检测，可应用于互动娱乐中增加互动体验，还能用于实现人群密度检测。
 
 ### 行人重识别
-也叫人体 ReID。指在人体检测的基础上，通过识别行人的穿着、体态等属性信息。配合人脸识别使用，还可以实现行人身份的确认。
+也叫人体 ReID。可通过人体检测，识别行人的穿着、体态、发型等属性信息。配合人脸识别使用，还可以实现行人身份的确认。
