--- a/product/开发者工具/云端开发环境 Cloud Studio/工具指南/在线预览调试.md
+++ b/product/开发者工具/云端开发环境 Cloud Studio/工具指南/在线预览调试.md
@@ -12,4 +12,4 @@
 `HYwxA0.png` 快捷键 Command + Shift + P 或 Ctrl + Shift + P，打开命令面板，打开命令输入框，输入命令行 `preview.start` 即可重新打开预览窗口。
 
 #### 端口中进程的快捷操作
-`HGnkOs.png` 对于**端口**中所展示的启动端口进程，将鼠标移入该进程，即可单击右侧显示的按钮进行“复制地址到剪贴板”、“打开外部浏览器”和“打开内置预览窗口”的快捷操。
+`HGnkOs.png` 对于**端口**中所展示的启动端口进程，将鼠标移入该进程，即可单击右侧显示的按钮进行“复制地址到剪贴板”、“打开外部浏览器”和“打开内置预览窗口”的快捷操作。
