--- a/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
+++ b/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
@@ -78,7 +78,7 @@ const sdk = new ArSdk({
 ```
 初始化 ArSdk 的 Config 支持以下参数：
 <table>
-<thead><tr><th>参数</th><th>说明</th><th>类型</th><th>是否必传</th></tr></thead>
+<thead><tr><th>参数</th><th>说明</th><th style="width:15%">类型</th><th>是否必传</th></tr></thead>
 <tbody>
 <tr>
 <td>auth</td>
@@ -484,10 +484,19 @@ sdk.on('error', (error) => {
 | 微信 webview | Android/iOS 微信8.0.16以上|
 | 微信小程序  | Android/iOS 微信8.0.16以及上|
 
-
+<style>
+.prestyle>tbody>tr>td>li>pre,.prestyle>tbody>tr>td>pre {
+    background-color: #50556B;
+    padding: 5px 5px;
+		margin-bottom: 5px;
+		word-break : break-all;
+		width:210px;
+		overflow: auto;
+}
+</style>
 ### SDK 提供方法
-<table>
-<thead><tr><th>接口</th><th>参数</th><th>返回</th><th>说明</th></tr></thead>
+<table class="prestyle">
+<thead><tr><th>接口</th><th width=200px>参数</th><th width=200px>返回</th><th >说明</th></tr></thead>
 <tbody><tr>
 <td>async getOutput()</td>
 <td>-</td>
