--- a/product/视频服务/美视优享/SDK下载/功能说明.md
+++ b/product/视频服务/美视优享/SDK下载/功能说明.md
@@ -88,7 +88,7 @@ A 系列基础套餐提供通用美型功能，适用于对脸部美颜调整要
 <td>-</td>
 </tr>
 <tr>
-<td><b>人像分割</b><br>（赠送 3 款指定分割贴纸）</td>
+<td><b>人像分割 / 虚拟背景</b><br>（赠送 3 款指定分割贴纸）</td>
 <td>-</td>
 <td>-</td>
 <td>-</td>
