--- a/product/视频服务/美视优享/SDK下载/功能说明.md
+++ b/product/视频服务/美视优享/SDK下载/功能说明.md
@@ -191,7 +191,7 @@ S 系列高级套餐提供高级美型功能（包括特效贴纸和美妆），
 <td>&#10003;</td>
 </tr>
 <tr>
-<td><b>人像分割</b><br>（赠送 3 款指定分割贴纸）</td>
+<td><b>人像分割 / 虚拟背景</b><br>（赠送 3 款指定分割贴纸）</td>
 <td>-</td>
 <td>-</td>
 <td>&#10003;</td>
