--- a/product/大数据与AI/弹性MapReduce/产品简介/版本历史.md
+++ b/product/大数据与AI/弹性MapReduce/产品简介/版本历史.md
@@ -13,7 +13,7 @@
 <td>hadoop 集群新增产品版本 EMR-V3.4.0</td>
 <td><li>支持 Spark3.2.1、Trino372、Flink1.14.3、Hbase2.4.5、Zookeeper3.6.3、Impala4.0.0、Zeppelin0.10.1、Alluxio2.8.0、Hudi0.10.1、Iceberg0.13.1、Goosefs1.2.0<li>新版本中 PrestoSQL 更名为 Trino，并支持 Ranger，新版本中监控指标告警需按 Trino 配置</td>
 <td>2022-04-22</td>
-<td><a href="https://cloud.tencent.com/document/product/589/20279" target="_blank">组件版本</a><br>Trino 监控指标</td>
+<td><a href="https://cloud.tencent.com/document/product/589/20279" target="_blank">组件版本</a><br><a href="https://cloud.tencent.com/document/product/589/72846" target="_blank">Trino 监控指标</a></td>
 </tr>	
 <tr>
 <td>事件功能及事件项</td>
