--- a/product/大数据与AI/人脸核身（云智慧眼）/产品简介/应用场景.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/产品简介/应用场景.md
@@ -1,5 +1,5 @@
 ## 政务民生
-**典型场景：综合政务服务、公安微警务、工商企业注册、养老金领取生存验证等**
+**典型场景：综合政务服务、交通安检-无证业务办理、工商企业注册、养老金领取生存验证等**
 响应国家号召，让群众和企业办事像“网购”一样方便，各委办局纷纷开展线上业务办理服务，用户打开各委办局的公众号、小程序或 App，调用腾讯云人脸核身服务进行实名注册 ，验证通过后可以预约办理各项业务。
 推荐使用：增强版人脸核身、基础版人脸核身
 
