--- a/product/互联网中间件/腾讯分布式服务框架/操作指南/运维中心/监控/部署组监控.md
+++ b/product/互联网中间件/腾讯分布式服务框架/操作指南/运维中心/监控/部署组监控.md
@@ -19,9 +19,8 @@
 - HTTP 状态码
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/98631546c55ab10452b84fd05da68f51.png)
-
-您可以通过部署组的请求错误率和耗时等指标判断部署组是否有异常，若有异常您可以单击部署组的“部署组ID/名称”，进入部署组页面。
-- 您可以在左侧部署组列表，单击请求量、请求错误率或平均响应耗时旁的排序图标对部署组进行正序或者倒序排序。
+您可以在左侧部署组列表，单击请求量、请求错误率或平均响应耗时旁的排序图标对部署组进行正序或者倒序排序。
+- 您可以通过部署组的请求错误率和耗时等指标判断部署组是否有异常，若有异常您可以单击部署组的“部署组ID/名称”，进入部署组页面。
 - 您可以在在基本信息标签页查看部署组基本信息。
 ![](https://qcloudimg.tencent-cloud.cn/raw/662a8c2d38f68b29c106586f28b3228e.png)
 - 您可以在日志标签页查看部署组的日志，用于排查问题，通过右上角按钮切换查看实时日志和历史日志。
