--- a/product/数据库/数据库智能管家/动态与公告/产品动态.md
+++ b/product/数据库/数据库智能管家/动态与公告/产品动态.md
@@ -1,3 +1,18 @@
+## 2022年04月
+<table>
+<tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=20%>相关文档</th></tr>
+<tbody>
+<tr>
+<td>新增 API 接口 </td>
+<td>新增如下 API 接口：
+<li>SQL 限流相关（MySQL）：<a href="https://cloud.tencent.com/document/product/1130/72831">查询实例 SQL 限流任务列表</a>、<a href="https://cloud.tencent.com/document/product/1130/72834">删除实例 SQL 限流任务</a>、<a href="https://cloud.tencent.com/document/product/1130/72835">创建实例 SQL 限流任务</a>、<a href="https://cloud.tencent.com/document/product/1130/72829">更改实例限流任务状态</a>。</li>
+<li>大 KEY 分析（Redis）：<a href="https://cloud.tencent.com/document/product/1130/72832">查询 Redis 实例大 KEY 列表</a>。</li>
+<li>帮助 SQL 转换成 SQL 模板：<a href="https://cloud.tencent.com/document/product/1130/72830">查询 SQL 模版</a>。</li>
+<li>数据库无主键表：<a href="https://cloud.tencent.com/document/product/1130/72833">查询实例无主键表</a>。</li>
+<li>权限：<a href="https://cloud.tencent.com/document/product/1130/72828">验证用户数据库账号权限</a>。</li></td>
+<td>-</td></tr>
+</tbody></table>
+
 ## 2022年03月
 <table>
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=20%>相关文档</th></tr>
