--- a/product/大数据与AI/人脸核身（云智慧眼）/服务等级协议.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/服务等级协议.md
@@ -24,7 +24,7 @@
 ### 2.2 免责范围
 以下情况所导致的服务不用性不纳入赔偿范围内：
 （1）腾讯云预先通知您进行本服务日常系统维护升级、变更、停机而导致的错误请求或不可用。
-（2）所依赖的外部对象维护、、网络或设备维护、故障或配置调整导致的不可用。
+（2）所依赖的外部对象维护、网络或设备维护、故障或配置调整导致的不可用。
 （3）由您的原因、第三方原因或不可抗力导致的不可用。
 （4）您未遵循本服务使用文档或使用建议引起的不可用。
 （5）其他非腾讯云原因造成的服务不可用或服务不达标的情况。
