--- a/product/视频服务/播放器/Android端集成/定制开发/直播场景/使用文档.md
+++ b/product/视频服务/播放器/Android端集成/定制开发/直播场景/使用文档.md
@@ -208,7 +208,7 @@ mLivePlayer.switchStream("http://5815.liveplay.myqcloud.com/live/5815_62fe94d692
 >?清晰度无缝切换功能需要在后台配置 PTS 对齐，如您需要可 [提交工单](https://console.cloud.tencent.com/workorder) 申请使用。
 
 ### 7、直播回看
-时移功能是腾讯云推出的特色能力，可以在直播过程中，随时观看回退到任意直播历史时间点，并能在此时间点一直观看直播。非常适合游戏、球赛等互动性不高，但观看连续性较强的场景。
+时移功能是腾讯云推出的特色能力，可以在直播过程中，随时回退到任意直播历史时间点观看，并能在此时间点一直观看直播。非常适合游戏、球赛等互动性不高，但观看连续性较强的场景。
 
 ```java
 // 设置直播回看前，先调用 startPlay
