增加基本网络排查手段

--- a/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/快速入门.md
@@ -47,6 +47,100 @@
 通过删除 pom 依赖或源码即可卸载 SDK。
 
 ## 开始使用
+正式使用前，先别急着书写第一行代码，请先花两分钟做下面的测试，确保发送的请求能够到达 COS 服务，这可以帮助您确认是否遇到了大部分用户在使用 Java SDK 时碰到的问题。
+下面测试中假设您尝试访问广州地域的 COS 服务。
+
+### 使用 ping 测试
+```shell
+[root@VM_centos /data/home/]# ping cos.ap-guangzhou.myqcloud.com
+PING cos.ap-guangzhou.myqcloud.com (9.*.*.*) xx(xx) bytes of data.
+64 bytes from 9.*.*.* (9.*.*.*): icmp_seq=1 ttl=xx time=0.xxx ms
+64 bytes from 9.*.*.* (9.*.*.*): icmp_seq=2 ttl=xx time=0.xxx ms
+64 bytes from 9.*.*.* (9.*.*.*): icmp_seq=3 ttl=xx time=0.xxx ms
+64 bytes from 9.*.*.* (9.*.*.*): icmp_seq=4 ttl=xx time=0.xxx ms
+64 bytes from 9.*.*.* (9.*.*.*): icmp_seq=5 ttl=xx time=0.xxx ms
+64 bytes from 9.*.*.* (9.*.*.*): icmp_seq=6 ttl=xx time=0.xxx ms
+64 bytes from 9.*.*.* (9.*.*.*): icmp_seq=7 ttl=xx time=0.xxx ms
+^C
+--- cos.ap-guangzhou.myqcloud.com ping statistics ---
+x packets transmitted, x received, 0% packet loss, time xxxms
+rtt min/avg/max/mdev = 0.xxx/0.xxx/0.xxx/0.xxx ms 
+```
+如果显示类似上面结果，则基本网络连通与名字服务都是正常的。如果返回其他异常结果，请优先排查环境网络问题或者联系本地网络管理员，确认全部正常后，再继续下一步。
+如果是在 Windows 下，也可以单击【开始】（或快捷键：Win+R）>【运行】（输入 cmd）>【确定】（或按 Enter 键），输入命令`ping cos.ap-guangzhou.myqcloud.com`并回车进行测试。
+
+### 使用 curl 测试
+如果使用 http 访问：
+```shell
+[root@VM_centos /data/home/]# curl http://cos.ap-guangzhou.myqcloud.com -v
+* About to connect() to cos.ap-guangzhou.myqcloud.com port 80 (#0)
+*   Trying 9.*.*.*...
+* Connected to cos.ap-guangzhou.myqcloud.com (9.*.*.*) port 80 (#0)
+> GET / HTTP/1.1
+> User-Agent: curl/*.*.0
+> Host: cos.ap-guangzhou.myqcloud.com
+> Accept: */*
+> 
+< HTTP/1.1 403 Forbidden
+< Content-Type: application/xml
+< Content-Length: XXX
+< Connection: keep-alive
+< Date: XXX XXX GMT
+< Server: tencent-cos
+< x-cos-request-id: NWE2MWQ5MjZfMTBhYzM1MGFfMTA5ODVfMTVj****
+< 
+<?xml version='1.0' encoding='utf-8' ?>
+<Error>
+        <Code>AccessDenied</Code>
+        <Message>Check auth failure because signture empty.</Message>
+        <ServerTime>XXX XXX</ServerTime>
+        <Resource>cos.ap-guangzhou.myqcloud.com/</Resource>
+        <RequestId>NWE2MWQ5MjZfMTBhYzM1MGFfMTA5ODVfMTVj****==</RequestId>    
+</Error>
+
+* Connection #0 to host cos.ap-guangzhou.myqcloud.com left intact
+```
+如果使用 https 访问：
+```shell
+[root@VM_centos /data/home/]# curl https://cos.ap-guangzhou.myqcloud.com -vk
+* About to connect() to cos.ap-guangzhou.myqcloud.com port 443 (#0)
+*   Trying 9.*.*.*...
+* Connected to cos.ap-guangzhou.myqcloud.com (9.*.*.*) port 443 (#0)
+* Initializing NSS with certpath: XXXX
+* skipping SSL peer certificate verification
+* SSL connection using ******
+* Server certificate:
+*       subject: CN=*.*.*.
+*       start date: XXX XXX GMT
+*       expire date: XXX XXX GMT
+*       common name: *.cos.ap-guangzhou.myqcloud.com
+*       issuer: XXX
+> GET / HTTP/1.1
+> User-Agent: curl/*.*.0
+> Host: cos.ap-guangzhou.myqcloud.com
+> Accept: */*
+> 
+< HTTP/1.1 403 Forbidden
+< Content-Type: application/xml
+< Content-Length: XXX
+< Connection: keep-alive
+< Date: XXX XXX GMT
+< Server: tencent-cos
+< x-cos-request-id: NWE2MWQ5MjZfMTBhYzM1MGFfMTA5ODVfMTVj****
+< 
+<?xml version='1.0' encoding='utf-8' ?>
+<Error>
+        <Code>AccessDenied</Code>
+        <Message>Check auth failure because signture empty.</Message>
+        <ServerTime>XXX XXX</ServerTime>
+        <Resource>cos.ap-guangzhou.myqcloud.com/</Resource>
+        <RequestId>NWE2MWQ5MjZfMTBhYzM1MGFfMTA5ODVfMTVj****</RequestId>        
+</Error>
+
+* Connection #0 to host cos.ap-guangzhou.myqcloud.com left intact
+```
+如果显示类似上面结果，则说明端口连接正常。如果返回其他异常结果，请优先排查环境网络问题或者联系本地网络管理员，确认全部正常后，再继续下一步。
+在 Windows 环境下，某些版本可能需要额外安装 curl 工具才能测试。
 
 下面为您介绍如何使用 COS Java SDK 完成一个基础操作，例如初始化客户端、创建存储桶、查询存储桶列表、上传对象、查询对象列表、下载对象和删除对象。对于示例中出现的类，在 IDE 中，您可以单击该类，查看该类的所有字段和函数定义，类中有较为详细的注释。
 
