--- a/product/视频服务/多媒体创作引擎/0-产品动态.md
+++ b/product/视频服务/多媒体创作引擎/0-产品动态.md
@@ -1,10 +1,29 @@
-
 ## 2022年04月
 <table>
 <thead>
 <tr><th width="20%">动态名称</th><th width="45%">动态描述</th><th width="15%">发布时间</th><th width="15%">相关文档</th></tr>
 </thead>
 <tbody><tr>
+<td>新增图片审阅</td>
+<td>支持在 Web 与小程序上对图片进行批注，并支持任意拖动及缩放功能</td>
+<td rowspan=5>2022-04-21</td>
+<td rowspan=2><a href="https://cloud.tencent.com/document/product/1156/64221">协作审片</a></td>
+</tr><tr>
+<td>新增文件空状态</td>
+<td>增加文件空状态，明确与审阅文件的区别</td>
+</tr><tr>
+<td>新增邮箱登录</td>
+<td>支持邮箱账号的注册及密码找回等功能</td>
+<td><a href="https://cloud.tencent.com/document/product/1156/64098"> 产品概述</a></td>
+</tr><tr>
+<td>直播剪辑优化</td>
+<td>支持7天内的直播内容剪辑，并放开直播剪辑的录制时长</td>
+<td><a href="https://cloud.tencent.com/document/product/1156/64205">直播剪辑</a></td>
+</tr><tr>
+<td>优化上传格式</td>
+<td>支持无后缀视频的上传，提升上传的稳定性</td>
+<td><a href="https://cloud.tencent.com/document/product/1156/64131">上传综述</a></td>
+</tr><tr>
 <td>上传速度提升</td>
 <td>上传底层优化，速度提升，最高达到百兆每秒，1G视频5秒上传</td>
 <td rowspan=6>2022-04-12</td>
