--- a/product/大数据与AI/人脸核身（云智慧眼）/产品简介/应用场景.md
+++ b/product/大数据与AI/人脸核身（云智慧眼）/产品简介/应用场景.md
@@ -22,7 +22,7 @@
 
 ## 交通出行
 **典型场景：机场安检登机、铁路安检购票、长途客运购票、边检口岸通关等**
-在机场安检时，会出现乘客忘带身份证的情况。腾讯云人脸核身帮助公安在小程序内搭建临时乘机证明的服务，用户在小程序内调用腾讯云人脸核身服务实名注册通过后，即可生成一张临时乘机二维码，在登机时，扫描二维码即可完成登记。
+在机场安检时，会出现乘客忘带身份证的情况。腾讯云人脸核身协助机场在小程序内搭建临时乘机证明的服务，用户在小程序内调用腾讯云人脸核身服务实名注册通过后，即可生成一张临时乘机二维码，在登机时，扫描二维码即可完成登记。
 推荐使用：基础版人脸核身、实名信息核验
 
 
