--- a/product/内容创作/应用云渲染/产品简介/产品优势.md
+++ b/product/内容创作/应用云渲染/产品简介/产品优势.md
@@ -1,6 +1,5 @@
 ## 低延时
-
-应用云渲染采用自研的 [Tencent-RTC](https://cloud.tencent.com/document/product/1162/46096#1230) 技术，并且针对“云应用”场景做了深度优化和功能定制，大大提升播放加载的速度，实现了网络抗抖动以及网络自适应，保障用户在使用时拥有流畅的使用体验。
+应用云渲染采用自研的 [云渲染 RTC](https://cloud.tencent.com/document/product/1162/46096#1230) 技术，并且针对“云端应用实时渲染”场景做了深度优化和功能定制
 
 ## 高画质
 
