Update and rename 产品优势.md to 产品优势_.md

--- a/product/内容创作/应用云渲染/产品简介/产品优势_.md
+++ b/product/内容创作/应用云渲染/产品简介/产品优势_.md
@@ -1,5 +1,5 @@
 ## 低延时
-应用云渲染采用自研的 [云渲染 RTC](https://cloud.tencent.com/document/product/1162/46096#1230) 技术，并且针对“云端应用实时渲染”场景做了深度优化和功能定制
+应用云渲染采用自研的云渲染 RTC 技术，并且针对“云端应用实时渲染”场景做了深度优化和功能定制
 
 ## 高画质
 
