--- a/product/视频服务/实时音视频/高级功能/事件回调.md
+++ b/product/视频服务/实时音视频/高级功能/事件回调.md
@@ -102,6 +102,8 @@
 | EVENT_TYPE_START_ASSIT  | 205  | 开始推送辅路数据 |
 | EVENT_TYPE_STOP_ASSIT   | 206  | 停止推送辅路数据 |
 
+>! 退出房间只会回调104事件，不会回调202跟204事件。104事件相当于包含了202和204事件。手动关闭视频/音频，才会回调202/204事件。
+
 [](id:event_infor)
 ### 事件信息
 
