--- a/product/互联网中间件/分布式事务/产品动态.md
+++ b/product/互联网中间件/分布式事务/产品动态.md
@@ -1,3 +1,18 @@
+## 2022年04月
+<table><tr>
+<th width="20%">动态名称</th>
+<th width="45%">动态描述</th>
+<th width="15%">发布时间</th>
+<th width="20%">相关文档</th>
+</tr><tr>
+<td>SDK bug修复</td>
+<td>
+<li>修复OkHttp3不允许头部为空的问题。</li>
+<li><b>SDK Release note：1.2.9-RELEASE</b></li></td>
+<td>2021-04-21</td>
+<td>-</td>
+</tr></table>
+
 ## 2021年12月
 <table><tr>
 <th width="20%">动态名称</th>
