--- a/product/计算与网络/腾讯云自动化助手/操作指南/使用自动化助手上传文件到服务器.md
+++ b/product/计算与网络/腾讯云自动化助手/操作指南/使用自动化助手上传文件到服务器.md
@@ -61,7 +61,7 @@
 :::
 ::: 在实例详情页面上传文件
 1. 登录 [云服务器控制台](https://console.cloud.tencent.com/cvm/instance/index)，进入“实例”页面。
-2. 在“实例”页面，单击实例 ID 进入实例详情页面，并选择**上传文件**页签。如下图所示：
+2. 在“实例”页面，单击实例 ID 进入实例详情页面，并选择**文件上传**页签。如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/cd2366a2c570fe9efac25948c0819bce.png)
 3. 单击**上传文件**，在弹出的“文件上传”窗口中，参考 [步骤3](#Step3) 设置相关参数并上传文件。
 上传成功后，您即可在列表中查看该记录。
@@ -102,7 +102,7 @@
 
 #### 方式2：在实例详情页下载
 1. 登录 [云服务器控制台](https://console.cloud.tencent.com/cvm/instance/index)，进入“实例”页面。
-2. 在“实例”页面，单击实例 ID 进入实例详情页面，并选择**上传文件**页签。如下图所示：
+2. 在“实例”页面，单击实例 ID 进入实例详情页面，并选择**文件上传**页签。如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/cd2366a2c570fe9efac25948c0819bce.png)
 3. 单击需下载文件所在行右侧的  <img src="https://qcloudimg.tencent-cloud.cn/raw/a30d47a84be8719a6d47c338956b9ab1.png" style="margin:-3px 0px">，即可下载该文件。
 
