--- a/product/互联网中间件/腾讯云微服务引擎/快速入门/步骤2：创建引擎实例.md
+++ b/product/互联网中间件/腾讯云微服务引擎/快速入门/步骤2：创建引擎实例.md
@@ -32,11 +32,11 @@
 </tr>
 <tr>
 <td>规格</td>
-<td>1C2G、2C4G、4C8G</td>
+<td>1C2G、2C4G、4C8G、8C16G、16C32G</td>
 </tr>
 <tr>
 <td>节点数</td>
-<td>可选3、4、5</td>
+<td>可选3、5、7</td>
 </tr>
 <tr>
 <td>部署架构</td>
@@ -47,7 +47,7 @@
 <td>所选择的私有网络必须和业务所在的私有网络一致。所选择的子网不用和业务所在的私有网络一致</td>
 </tr>
 </tbody></table>
-3. 单击<b>创建</b>，完成引擎创建。
+3. 单击<b>立即购买</b>，完成引擎创建。
 <img src = "https://qcloudimg.tencent-cloud.cn/raw/dce3b44d2823c1bb9b17edbe229b565e.png">
 
 
