--- a/product/互联网中间件/腾讯云微服务引擎/快速入门/步骤2：创建引擎实例.md
+++ b/product/互联网中间件/腾讯云微服务引擎/快速入门/步骤2：创建引擎实例.md
@@ -48,7 +48,7 @@
 </tr>
 </tbody></table>
 3. 单击<b>立即购买</b>，完成引擎创建。
-<img src = "https://qcloudimg.tencent-cloud.cn/raw/dce3b44d2823c1bb9b17edbe229b565e.png">
+<img src = "https://qcloudimg.tencent-cloud.cn/raw/a4ba92b4362b531bdacff37f34ce4828.jpg">
 
 
 
