--- a/product/互联网中间件/腾讯云微服务引擎/注册配置中心/Nacos 操作指南/01 引擎管理.md
+++ b/product/互联网中间件/腾讯云微服务引擎/注册配置中心/Nacos 操作指南/01 引擎管理.md
@@ -28,11 +28,11 @@
 </tr>
 <tr>
 <td>规格</td>
-<td>1C2G、2C4G、4C8G</td>
+<td>1C2G、2C4G、4C8G、8C16G、16C32G</td>
 </tr>
 <tr>
 <td>节点数</td>
-<td>节点数只能为奇数 ，可选3、5</td>
+<td>节点数只能为奇数 ，可选3、5、7</td>
 </tr>
 <tr>
 <td>架构</td>
