--- a/product/安全服务/网站管家/操作指南/资产中心/实例列表.md
+++ b/product/安全服务/网站管家/操作指南/资产中心/实例列表.md
@@ -35,10 +35,13 @@
 ![](https://main.qcloudimg.com/raw/7730ae51acb39f40b324d6f11c0b5678.png)
 1. 若套餐即将到期，需要续费，单击**续费**，在 Web 应用防火墙套餐续费页面，选择续费时长，单击**立即续费**，可对当前套餐进行续费。
 ![](https://main.qcloudimg.com/raw/c088ffea99725b484070b19151787be7.png)
-2. 如果展板显示域名数量包或 QPS 规格将满，单击**更多**，选择**购买域名包**或**购买 QPS 扩展包**，即可进行域名包和 QPS 扩展包的购买。
+2. 如果展板显示域名数量包或 QPS 规格将满，单击**更多**，选择**购买域名包**、**购买 QPS 扩展包**或 **BOT与业务安全**，即可进行域名包、QPS 扩展包或 BOT与业务安全的购买。
 >? 如果当前实例或域名包已经过期，请先续费，再购买。
 >
  - 购买域名包：选择购买数量（1-500个），单击**立即购买**，即可购买域名包。
  ![](https://main.qcloudimg.com/raw/7ed2d999aa1ce3ed87c7139ac6233acb.png)
  - 购买 QPS 扩展包：选择购买数量（1-500个），单击**立即购买**，即可购买 QPS 扩展包。
  ![](https://main.qcloudimg.com/raw/30ef9a757bf15a30e0acb882d0b1f005.png)
+ - BOT与业务安全：根据实际需求勾选防护内容，单击**立即购买**，即可 BOT与业务安全。
+![](https://qcloudimg.tencent-cloud.cn/raw/8fa4ab30947e095de02bb8fc7f9316ce.png)
+
