--- a/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/快速入门.md
@@ -67,10 +67,10 @@ x packets transmitted, x received, 0% packet loss, time xxxms
 rtt min/avg/max/mdev = 0.xxx/0.xxx/0.xxx/0.xxx ms 
 ```
 如果显示类似上面结果，则基本网络连通与名字服务都是正常的。如果返回其他异常结果，请优先排查环境网络问题或者联系本地网络管理员，确认全部正常后，再继续下一步。
-如果是在 Windows 下，也可以单击【开始】（或快捷键：Win+R）>【运行】（输入 cmd）>【确定】（或按 Enter 键），输入命令`ping cos.ap-guangzhou.myqcloud.com`并回车进行测试。
+如果是在 Windows 下，也可以单击**开始 （或快捷键：Win+R）> 运行 （输入 cmd）> 确定（或按 Enter 键）**，输入命令`ping cos.ap-guangzhou.myqcloud.com`并回车进行测试。
 
 ### 使用 curl 测试
-如果使用 http 访问：
+如果使用 HTTP 访问：
 ```shell
 [root@VM_centos /data/home/]# curl http://cos.ap-guangzhou.myqcloud.com -v
 * About to connect() to cos.ap-guangzhou.myqcloud.com port 80 (#0)
@@ -100,7 +100,7 @@ rtt min/avg/max/mdev = 0.xxx/0.xxx/0.xxx/0.xxx ms
 
 * Connection #0 to host cos.ap-guangzhou.myqcloud.com left intact
 ```
-如果使用 https 访问：
+如果使用 HTTPS 访问：
 ```shell
 [root@VM_centos /data/home/]# curl https://cos.ap-guangzhou.myqcloud.com -vk
 * About to connect() to cos.ap-guangzhou.myqcloud.com port 443 (#0)
@@ -153,7 +153,8 @@ COS Java SDK 的包名为`com.qcloud.cos.*`，您可以通过 Eclipse 或者 Int
 
 在执行任何和 COS 服务相关请求之前，都需要先生成 COSClient 类的对象， COSClient 是调用 COS API 接口的对象。
 
->!COSClient 是线程安全的类，允许多线程访问同一实例。因为实例内部维持了一个连接池，创建多个实例可能导致程序资源耗尽，**请确保程序生命周期内实例只有一个**，并在不再需要使用时，调用 shutdown 方法将其关闭。如果需要新建实例，请先将之前的实例关闭。
+>! COSClient 是线程安全的类，允许多线程访问同一实例。因为实例内部维持了一个连接池，创建多个实例可能导致程序资源耗尽，**请确保程序生命周期内实例只有一个**，并在不再需要使用时，调用 shutdown 方法将其关闭。如果需要新建实例，请先将之前的实例关闭。
+>
 
 若您使用永久密钥初始化 COSClient，可以先在访问管理控制台中的 [API 密钥管理](https://console.cloud.tencent.com/cam/capi) 页面获取 APPId、SecretId、SecretKey，使用永久密钥适用于大部分的应用场景，参考示例如下：
 
