--- a/product/视频服务/实时音视频/含 UI 集成方案/多人音视频房间（TUIRoom）/小程序.md
+++ b/product/视频服务/实时音视频/含 UI 集成方案/多人音视频房间（TUIRoom）/小程序.md
@@ -117,7 +117,7 @@ wss://wss.tim.qq.com
 2. 填写您微信小程序的 AppID，单击**确定**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/5ee0b9316a23f89efebdb51cdb622504.png)
 >!此处应输入您微信小程序的 AppID，而非 SDKAppID。
-3. 在 `project.config.json` 文件中，修改 setting 下的 useCompilerPlugins 字段为 `["typescript", "less"]`。
+3. 在 `project.config.json` 文件中，修改 setting 下的 useCompilerPlugins 字段为 `["typescript", "sass"]`。
 4. 单击**预览**，生成二维码，通过手机微信扫码二维码即可进入小程序。
 
 [](id:QQ)
