--- a/product/大数据与AI/图片标签/购买指南/计费概述.md
+++ b/product/大数据与AI/图片标签/购买指南/计费概述.md
@@ -1,11 +1,13 @@
 图像分析产品（含 [图像标签](https://cloud.tencent.com/document/api/865/35471)、[商品识别](https://cloud.tencent.com/document/api/865/36457)、[车辆识别](https://cloud.tencent.com/document/api/865/36456)、[商品识别-微信识物版](https://cloud.tencent.com/document/api/865/43354)、[公众人物识别](https://cloud.tencent.com/document/api/865/36900)、[图像智能裁剪](https://cloud.tencent.com/document/api/865/38899)、[图像质量评估](https://cloud.tencent.com/document/api/865/36899)、[图像搜索](https://cloud.tencent.com/document/product/865/63483)）已正常计费售卖，产品价格见下文。[图像清晰度增强](https://cloud.tencent.com/document/api/865/36902) 当前处于免费公测阶段，暂不支持开通后付费和购买预付费资源包。
 
 ### 产品价格
+
 图像分析产品以上各接口，2020年1月1日00:00起开始正式按调用量计费，公测期间开通的客户将自动转入后付费，价格和计费规则如下：
-<table width="908px">
+
+<table>
   <tbody>
     <tr >
-      <td width="86px">
+      <td >
         <strong>服务类型</strong></td>
       <td >
         <strong>月调用总量对应单价</strong></td>
@@ -19,7 +21,7 @@
         <strong>15000千次以上/月</strong></td>
     </tr>
     <tr>
-      <td rowspan="12" >图像理解</td>
+      <td rowspan="6" >图像理解</td>
       <td >图像标签</td>
       <td >2.5元/千次</td>
       <td>2.2元/千次</td>
@@ -48,83 +50,14 @@
       <td >3元/千次</td>
       <td>2.5元/千次</td>
       <td>2元/千次</td>
-      <td >1.5元/千次</td>
-	</tr>
-	   <tr >
-      <td ></td>  
-			<td colspan="5" >
-			</td>     
-	</tr>
-	<tr >
-      <td >
-        <strong>月调用总量对应单价</strong></td>
-      <td >
-        <strong>0 - 10千次/月</br>(不含10千次)</strong></td>
-      <td >
-			<strong>10千 - 100千次/月</br>(不含100千次) </strong></td>
-      <td >
-			<strong>100千 - 1000千次/月</br>(不含1000千次) </strong></td>
-      <td >
-        <strong>1000千次以上/月</strong></td>
-    </tr>
-	<tr >
-      <td >宠物识别图片版</td>
-      <td >20元/千次</td>
-      <td>18元/千次</td>
-      <td>16元/千次</td>
-      <td >14元/千次</td>
-	</tr>
-	  <tr >
-      <td >宠物识别视频版</td>
-      <td >100元/千次</td>
-      <td>	90元/千次</td>
-      <td>80元/千次</td>
-      <td >	70元/千次</td>
-	</tr>
-	 <tr >
-      <td ></td>  
-			<td colspan="5" >
-			</td>     
-	</tr>
-	<tr >
-      <td >
-        <strong>月调用总量对应单价</strong></td>
-      <td >
-        <strong>0 - 3000千次/月</br>(不含3000千次)</strong></td>
-      <td >
-			<strong>3000千 - 10000千次/月</br>(不含10000千次) </strong></td>
-      <td >
-			<strong>10000千 - 15000千次/月</br>(不含15000千次) </strong></td>
-      <td >
-        <strong>15000千次以上/月</strong></td>
-    </tr>
-	<tr >
-      <td >明厨亮灶</td>
-      <td >2.5元/千次</td>
-      <td>	2.2元/千次</td>
-      <td>2元/千次</td>
-      <td >	1.8元/千次</td>
-	</tr>
-  </tbody>
-</table>
-
-<table  width="908px">
-  <tbody>
-	<tr >
-      <td width="86px">
-        <strong >服务类型</strong></td>
-      <td >
-        <strong>月调用总量对应单价</strong></td>
-      <td >
-        <strong>0 - 1000千次/月</br>(不含1000千次)</strong></td>
-      <td >
-			<strong>1000千 - 3000千次/月</br>(不含3000千次) </strong></td>
-      <td >
-			<strong>3000千 - 15000千次/月</br>(不含15000千次) </strong></td>
-      <td >
-        <strong>15000千次以上/月</strong></td>
-    </tr>
-   <tr >
+      <td >1.5元/千次</td></tr>
+     <tr >
+      <td >车辆识别（增强版）</td>
+      <td >75元/千次</td>
+      <td>45元/千次</td>
+      <td>35元/千次</td>
+      <td >30元/千次</td></tr>
+    <tr >
       <td >图像处理</td>
       <td >智能裁剪</td>
       <td >2元/千次</td>
@@ -152,18 +85,19 @@
       <td >12元/千次</td>
       <td >10元/千次</td>
      </tr>
-	</tbody>
+  </tbody>
 </table>
 
 ### 计费与结算方式
+
 - 本产品为公有云产品，根据调用量，按月后付费。采用阶梯到达定价，月累计调用量越高，单价越低。
 - 次月1-3日会出本月账单，本月结算完成后，将以本月调用量 * 刊例价 * 100%作为次月费用的预估对账户进行冻结，该冻结在下月结算时先进行解冻再进行下月额度的扣费。
 - 只要您开通了图像分析某项服务，该项服务都可以享受10,000次/月的免费调用额度，该10,000次免费次数将以免费资源包的形式配送，并在计费结算时优先扣减。
 - 目前仅支持后付费，上线预付费资源包后将通知各位用户。
 
->? 
+> ? 
+
 - 图像分析产品客户，如果需要增加并发或定制，收费标准以腾讯云商务报价为准，详情请 [联系我们](https://cloud.tencent.com/act/event/connect-service) 。
 - 旧版图像标签服务已经升级为使用更先进深度学习技术、覆盖范围更广的图像分析- [图像标签服务](https://cloud.tencent.com/document/api/865/35471)，建议使用新版，开通方法详见 [腾讯云图像分析入门](https://cloud.tencent.com/product/tiia/getting-started) 。旧版图像标签将在2020年4月停止服务，敬请客户做好迁移工作。
 - 其他计费相关的问题，请详见图像分析常见问题 [计费与账单相关](https://cloud.tencent.com/document/product/865/39163) 。  
-
 
