--- a/product/大数据与AI/图片标签/购买指南/计费概述.md
+++ b/product/大数据与AI/图片标签/购买指南/计费概述.md
@@ -1,4 +1,4 @@
-图像分析产品（含 [图像标签](https://cloud.tencent.com/document/api/865/35471)、[商品识别](https://cloud.tencent.com/document/api/865/36457)、[车辆识别](https://cloud.tencent.com/document/api/865/36456)、[商品识别-微信识物版](https://cloud.tencent.com/document/api/865/43354)、[公众人物识别](https://cloud.tencent.com/document/api/865/36900)、[图像智能裁剪](https://cloud.tencent.com/document/api/865/38899)、[图像质量评估](https://cloud.tencent.com/document/api/865/36899)、[图像搜索](https://cloud.tencent.com/document/product/865/63483)）已正常计费售卖，产品价格见下文。[图像清晰度增强](https://cloud.tencent.com/document/api/865/36902) 当前处于免费公测阶段，暂不支持开通后付费和购买预付费资源包。
+图像分析产品（含 [图像标签](https://cloud.tencent.com/document/api/865/35471)、[商品识别](https://cloud.tencent.com/document/api/865/36457)、[车辆识别](https://cloud.tencent.com/document/api/865/36456)、[车辆识别（增强版）](https://cloud.tencent.com/document/api/865/72553)、[商品识别-微信识物版](https://cloud.tencent.com/document/api/865/43354)、[公众人物识别](https://cloud.tencent.com/document/api/865/36900)、[图像智能裁剪](https://cloud.tencent.com/document/api/865/38899)、[图像质量评估](https://cloud.tencent.com/document/api/865/36899)、[图像搜索](https://cloud.tencent.com/document/product/865/63483)）已正常计费售卖，产品价格见下文。[图像清晰度增强](https://cloud.tencent.com/document/api/865/36902) 当前处于免费公测阶段，暂不支持开通后付费和购买预付费资源包。
 
 ### 产品价格
 
