--- a/product/存储与CDN/日志服务/用户指南/日志分析/分析函数/日期和时间函数.md
+++ b/product/存储与CDN/日志服务/用户指南/日志分析/分析函数/日期和时间函数.md
@@ -125,20 +125,20 @@ field 支持如下取值：year、quarter、month、week、day、day_of_month、
 | field        | 提取结果 | 说明                                                         | 简化形式       |
 | :----------- | :------- | :----------------------------------------------------------- | -------------- |
 | year         | 2021     | 提取目标日期中的年份。                                         | year(x)        |
-| quarter      | 2        | 提取目标日期所属的季度。                                       | quarter()      |
-| month        | 5        | 提取目标日期中的月份。                                         | month()        |
-| week         | 20       | 计算目标日期是在一年中的第几周。                               | week()         |
-| day          | 21       | 提取目标日期中的天数，按月分别计算，等同于 day_of_month。       | day()          |
-| day_of_month | 21       | 等同于 day。                                                    | day()          |
-| day_of_week  | 5        | 计算目标日期是一周中的第几天，等同于 dow。                      | day_of_week()  |
-| dow          | 5        | 等同于 day_of_week。                                            | day_of_week()  |
-| day_of_year  | 141      | 计算目标日期是一年中的第几天，等同于 doy。                      | day_of_year()  |
-| doy          | 141      | 等同于 day_of_year。                                            | day_of_year()  |
-| year_of_week | 2021     | 获取目标日期在 [ISO week date](https://en.wikipedia.org/wiki/ISO_week_date) 中的年份，等同于 yow。 | year_of_week() |
-| yow          | 2021     | 等同于 year_of_week。                                           | year_of_week() |
-| hour         | 5        | 提取目标日期中的小时。                                         | hour()         |
-| minute       | 20       | 提取目标日期中的分钟。                                         | minute()       |
-| second       | 1        | 提取目标日期中的秒。                                           | second()       |
+| quarter      | 2        | 提取目标日期所属的季度。                                       | quarter(x)      |
+| month        | 5        | 提取目标日期中的月份。                                         | month(x)        |
+| week         | 20       | 计算目标日期是在一年中的第几周。                               | week(x)         |
+| day          | 21       | 提取目标日期中的天数，按月分别计算，等同于 day_of_month。       | day(x)          |
+| day_of_month | 21       | 等同于 day。                                                    | day(x)          |
+| day_of_week  | 5        | 计算目标日期是一周中的第几天，等同于 dow。                      | day_of_week(x)  |
+| dow          | 5        | 等同于 day_of_week。                                            | day_of_week(x)  |
+| day_of_year  | 141      | 计算目标日期是一年中的第几天，等同于 doy。                      | day_of_year(x)  |
+| doy          | 141      | 等同于 day_of_year。                                            | day_of_year(x)  |
+| year_of_week | 2021     | 获取目标日期在 [ISO week date](https://en.wikipedia.org/wiki/ISO_week_date) 中的年份，等同于 yow。 | year_of_week(x) |
+| yow          | 2021     | 等同于 year_of_week。                                           | year_of_week(x) |
+| hour         | 5        | 提取目标日期中的小时。                                         | hour(x)         |
+| minute       | 20       | 提取目标日期中的分钟。                                         | minute(x)       |
+| second       | 1        | 提取目标日期中的秒。                                           | second(x)       |
 
 
 ## 时间间隔函数
