--- a/product/视频服务/直播/常见问题/域名配置相关问题.md
+++ b/product/视频服务/直播/常见问题/域名配置相关问题.md
@@ -45,5 +45,8 @@
   > ? Java 和 Windows 服务器偏向于使用这种编码格式。
 
 
+[](id:que8)
+### 腾讯云直播鉴权有效期什么意思？
+播放鉴权支持配置有效时间这个参数，主要应用在那种已经提供分发播放地址给了平台，但是由于大会现场结束时间可能有改变。这种时候又不能影响下行播放，所以我们支持修改播放域名的鉴权有效时间。以达到延迟地址过期时间。
 
-
+有效时间默认用0即可，这时候过期时间就是 txTime 的时间，实际最终结束时间 = txTime + 鉴权有效期。
