--- a/product/安全服务/安全攻防对抗服务/购买指南/计费概述.md
+++ b/product/安全服务/安全攻防对抗服务/购买指南/计费概述.md
@@ -1,3 +1,6 @@
+
+本文介绍安全攻防对抗服务的服务说明及计费说明，并提供服务场景的参考配置，帮助您快速了解安全攻防对抗服务的使用场景。
+
 ## 服务内容
 安全攻防对抗服务（Cybersecurity Attack-Defense Confrontation, CADC）基于腾讯安全专家能力及多年的攻防对抗经验构建。面向对安全能力有较高要求的企业用户，在用户授权后，通过模拟 APT 攻击的方式，对企业信息化资产以及可能产生危害的安全风险进行测试。通过多维度、多视角安全攻防对抗，动态检测企业安全防护的整体水位。
 
