--- a/product/互联网中间件/腾讯分布式服务框架/操作指南/运维中心/监控/服务监控.md
+++ b/product/互联网中间件/腾讯分布式服务框架/操作指南/运维中心/监控/服务监控.md
@@ -25,10 +25,7 @@
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/061c89b6a19c1d96baa8ddf329b7ca3d.png)
 在服务维度区域，您可以执行以下操作：
-<dx-alert infotype="explain" title="">
-将鼠标放在接口卡片的服务名称上，单击右上角的![](https://qcloudimg.tencent-cloud.cn/raw/6bc0a1003da8cb84026fa5ce8b7e2f11.png)将该接口卡片置顶。
-</dx-alert>
-
+ - 将鼠标放在接口卡片的服务名称上，单击右上角的![](https://qcloudimg.tencent-cloud.cn/raw/6bc0a1003da8cb84026fa5ce8b7e2f11.png)将该接口卡片置顶。
  - 开启**仅显示异常**按钮，筛选出**服务离线+服务错误率大于5%**的服务。
  - 按照**请求量**、**耗时**或**错误率**维度对服务图表进行排序。
  - 通过关键词搜索特定微服务。
