--- a/product/大数据与AI/万象优图2.0/购买指南/资源包（预付费）/资源包介绍.md
+++ b/product/大数据与AI/万象优图2.0/购买指南/资源包（预付费）/资源包介绍.md
@@ -282,7 +282,7 @@
 
 **资源包抵扣说明**
 
-媒体处理资源包用于抵扣媒体处理功能产生的消耗量，使用音视频转码、音视频拼接、视频转动图都可以使用该资源包进行抵扣，该资源包支持叠加购买，系统会每天统计被用于媒体处理的文件时长，在资源包额度范围内的部分直接使用资源包进行抵扣，超出资源包的部分将以按量计费方式结算。
+媒体处理资源包用于抵扣媒体处理功能产生的消耗量，使用音视频转码、极速高清、音视频拼接、视频转动图都可以使用该资源包进行抵扣，该资源包支持叠加购买，系统会每天统计被用于媒体处理的文件时长，在资源包额度范围内的部分直接使用资源包进行抵扣，超出资源包的部分将以按量计费方式结算。
 
 
 **计费价格**
@@ -322,10 +322,11 @@
 
 **媒体处理资源包抵扣比例**
 
-媒体处理资源包可以抵扣以下普通转码的转码时长，不同编码方式和分辨率有对应的抵扣比例，抵扣比例如下：
+媒体处理资源包可以抵扣以下普通转码和极速高清的转码时长（按表格中顺序抵扣），不同编码方式和分辨率有对应的抵扣比例，抵扣比例如下：
 
 >?中国境内和中国境外地域均按照1:1的比例进行抵扣。
 
+普通转码：
 | 编码方式 | 分辨率                      | 抵扣比例                         |
 | :------- | :-------------------------- | :------------------------------- |
 | 音频转码 | -                           | 1:0.25                     |
@@ -346,9 +347,24 @@
 | VP8      | 2K（短边 ≤ 1440px）         | 1:8                        |
 | VP8      | 4K（短边 ≤ 2160px）         | 1:16                       |
 
+极速高清：
+|编码方式 |分辨率 | 抵扣比例|
+|---------|---------|---------|
+| H.264 |   标清 SD（短边 ≤ 480px）|  1 : 3 | 
+| H.264 | 高清 HD（短边 ≤ 720px）|  1 : 6| 
+| H.264 | 全高清 FHD（短边 ≤ 1080px）|   1 : 12 | 
+| H.264 | 2K（短边 ≤ 1440px） | 1 : 24 | 
+| H.264 | 4K（短边 ≤ 2160px） | 1 : 48 | 
+| H.265 | 标清 SD（短边 ≤ 480px）|  1 : 15 | 
+| H.265 | 高清 HD（短边 ≤ 720px）|  1 : 30 | 
+| H.265 | 全高清 FHD（短边 ≤ 1080px）|   1 : 60| 
+| H.265 | 2K（短边 ≤ 1440px） | 1 : 120 | 
+| H.265 | 4K（短边 ≤ 2160px） | 1 : 240 | 
+
+
 资源包计量示例：
 
-例如，用户转码 H.264 标清 SD 视频10分钟，则媒体处理资源包内额度减少10分钟，而用户转码 H.265 标清视频10分钟，则资源包内额度减少50分钟。
+例如，用户使用普通转码 H.264 标清 SD 视频10分钟，则媒体处理资源包内额度减少10分钟，而用户使用极速高清转码 H.264 标清视频10分钟，则资源包内额度减少30分钟。
 
 
  
