--- a/product/计算与网络/容器服务/弹性集群指南/镜像缓存.md
+++ b/product/计算与网络/容器服务/弹性集群指南/镜像缓存.md
@@ -52,7 +52,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/c10845a23a1f3e91440d0535c992098b.png)
 
 ### 使用镜像缓存
-创建 EKS Pod 或容器实例时，可在**高级配置**中，开启使用镜像缓存，主要有以下两种匹配方式，可以根据自身需求选择合适的匹配方式。
+创建 EKS Pod 时，可在**高级配置**中，开启使用镜像缓存，主要有以下两种匹配方式，可以根据自身需求选择合适的匹配方式。
 <dx-tabs>
 ::: 自动匹配
 在缓存匹配模式中选择**自动匹配**时，根据以下匹配策略，将自动匹配最优的镜像缓存。
