--- a/product/安全服务/网站管家/新版 WAF/操作指南/接入高级功能.md
+++ b/product/安全服务/网站管家/新版 WAF/操作指南/接入高级功能.md
@@ -26,3 +26,11 @@
 在 [域名列表页面](https://console.cloud.tencent.com/guanjia/tea-domain)，选择所需域名，单击访问日志处的![](https://qcloudimg.tencent-cloud.cn/raw/deacc1dd2ca341267f225409e53c3bf9.png)，开启后将自动记录访问日志，用于日常快速检索和溯源分析。
 ![](https://qcloudimg.tencent-cloud.cn/raw/1c811c85e1a52e81a6d8f79cab67b3b1.png)
 
+
+## 启用日志投递功能
+日志投递功能用于将日志数据投递到 CLS（日志服务）、CKafka（消息队列），详情见 [日志投递](https://cloud.tencent.com/document/product/627/70276)。
+1. 登录 [Web 应用防火墙控制台](https://console.cloud.tencent.com/guanjia/tea-overview)，在左侧导航栏中，选择**资产中心** > **域名列表**，进入域名列表页面。
+2. 在域名列表页面，选择所需域名，单击操作列的**更多** > **日志投递**。
+![](https://qcloudimg.tencent-cloud.cn/raw/0aca870524d62021bf4cf971dfbf9756.png)
+3. 在高级设置弹窗中，勾选投递目标后，单击**保存**，即可开启日志投递功能。
+![](https://qcloudimg.tencent-cloud.cn/raw/1101b0847f77f9517ca264cebcce2fa9.png)
