--- a/product/计算与网络/容器服务/弹性集群指南/镜像缓存.md
+++ b/product/计算与网络/容器服务/弹性集群指南/镜像缓存.md
@@ -2,7 +2,7 @@
 
 ## 镜像缓存概述 
 
-使用镜像缓存可以在创建实例时加速拉取镜像，减少实例的启动耗时。该能力适用于 EKS 集群 Pod、虚拟节点、容器实例。本文主要介绍镜像缓存的工作原理、计费说明、创建和使用方式等。
+使用镜像缓存可以在创建实例时加速拉取镜像，减少实例的启动耗时。该能力适用于 EKS 集群 Pod 和虚拟节点。本文主要介绍镜像缓存的工作原理、计费说明、创建和使用方式等。
 
 
 
