--- a/product/存储与CDN/内容分发网络/配置手册/缓存配置/缓存规则配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/缓存配置/缓存规则配置.md
@@ -25,11 +25,11 @@
 	- 若源站对应的 HTTP Response Header 中存在 Cache-Control 字段，则：
 	若 Cache-Control 字段为 max-age，CDN 节点缓存资源的时间按照 max-age 值。
   若 Cache-Control 字段为 no-cache/no-store/private，CDN 节点不缓存资源。
-	- 若源站对应的 HTTP Response Header 中无 Cache-Control 或Expires字段，**且未开启启发式缓存**，则：CDN 节点不缓存资源。
-	- 若源站对应的 HTTP Response Header 中无Cache-Control 或Expires字段，**且已开启启发式缓存**，则如下图所示：
+	- 若源站对应的 HTTP Response Header 中无 Cache-Control 或Expires字段，且未开启启发式缓存，则：CDN 节点不缓存资源。
+	- 若源站对应的 HTTP Response Header 中无Cache-Control 或Expires字段，打开启发式缓存开关，则如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/cb8ab0e4837be8d87bee3f13d33f4abb.png)
 		1. 若选择的是**默认配置**，如果源站响应头存在 Last-Modified，则默认缓存时间=（当前时间 - Last-Modified）* 0.1，如果源站响应头不存在 Last-Modified，则默认缓存时间为600s。
-		2. 若选择的是 自定义策略，支持您自定义缓存时间
+		2. 若选择的是**自定义策略**，支持您自定义缓存时间
 ![](https://qcloudimg.tencent-cloud.cn/raw/66e03b245de020e865cefb51b440eb36.png)
 	 3. 您可通过如下页快速查看已开启启发缓存的规则
 ![](https://qcloudimg.tencent-cloud.cn/raw/a4d3308f00956f4c0f9437036971f5d9.png)
