--- a/product/安全服务/数据安全审计/产品介绍/产品概述.md
+++ b/product/安全服务/数据安全审计/产品介绍/产品概述.md
@@ -1,16 +1,15 @@
 ## 背景说明
-随着社会信息化程度愈来愈高，企业 IT 系统飞速扩张，线上业务数据也与日俱增。业务数据上线带来了长久稳定的存储模式、快速高效的企业数据分析等诸多好处，但同时也使得集中化数据暴露在恶意攻击、黑客渗透、内部泄密等风险之中。近几年频频发生企业数据丢失造成重大损失以及各类数据窃密的刑事案件，均是数据安全问题的真实写照。当代信息化系统常见的数据风险主要有以下几类：
-- 数据系统分散，缺乏集中审计监控。
+随着社会信息化深度日益加深，企业IT系统飞速扩张，越来越多的业务数据搬上公有云。业务数据上云可以带来长久稳定的存储模式、快速高效的企业数据分析，享受云计算带来的便利，同时，企业仍然面临数据安全问题，并且在云上产生了新的变化。近几年频频发生公司因数据丢失受到重大损失的新闻，以及各类数据窃密的刑事案件，都是数据安全问题的真实写照。常见的公有云数据风险主要有以下几类：
+- 审计信息不全，不满足网络安全法及等保三级要求。
 - 恶意攻击日趋隐蔽，难以有效发现并制定应对措施。
 - 内部防范措施不到位，内网人员有机可乘。
 - 数据库压力监控不到位，突发性能问题。
 - 获取泄密证据困难。
 
 ## 产品简介
-针对上述数据安全问题，腾讯数盾推出产品数据安全审计（Data Security Audit，DSAudit）， 能够在云上、云下环境任意部署，对企业网络中的数据库各类会话信息、访问操作、SQL 语句进行全量审计入库。
-- 全面支持常见数据资产类型：MySQL、SQLServer、PostgreSQL、MongoDB、Oracle、Redis、Hbase、Hive、TDSQL、TXSQL、MariaDB。
+针对上述数据安全问题，腾讯云数据安全审计（Data Security Audit，DSAudit）能够覆盖公有云、友商云和 IDC 的资产，对企业网络中的数据库各类会话信息、访问操作、SQL 语句进行全量审计入库。
+- 满足网络安全法、等保三级要求。
 - 获得审计数据后，数据安全审计能根据多种规则库和威胁检测引擎识别操作中的恶意行为，并及时通知管理员进行相应的安全防护措施。
-- 数据安全审计还能够对数据库进行逐台的语句压力统计，通过历史纵向压力信息和数据库之间的横向压力对比展示各数据库的压力情况，协助管理员提前预防性能问题。
 - 对于已发生的安全事故，数据安全审计支持在数年的审计日志中检索蛛丝马迹，为企业还原安全事故全貌并定位责任人。
 - 数据安全审计具备强大的 AI 威胁检测引擎，即使面对非常严峻的安全环境，依然能够轻松预测变化，将各类新出现的变体攻击通报给管理员，帮助企业从容应对各种形态的攻击。
-- 数据安全审计能够应对因数据访问量巨大而产生的审计难题。数据安全审计每秒 SQL 吞吐量达十万级，每小时入库速率达千万级，完美应对超高并发环境，在高强度语句压力面前数据不丢包，内容不失真，完整记录数据库访问信息。
+- 数据安全审计能够应对因数据访问量巨大而产生的审计难题。数据安全审计基于腾讯 TKE 技术的 SaaS 架构，可根据用户数据库流量随时扩展算力， SQL 吞吐量达十万级，每小时入库速率达千万级，完美应对超高并发环境，在高强度语句压力面前数据不丢包，内容不失真，完整记录数据库访问信息。
