--- a/product/存储与CDN/内容分发网络/配置手册/缓存配置/缓存规则配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/缓存配置/缓存规则配置.md
@@ -34,7 +34,7 @@
 	 3. 您可通过如下页快速查看已开启启发缓存的规则
 ![](https://qcloudimg.tencent-cloud.cn/raw/a4d3308f00956f4c0f9437036971f5d9.png)
 >! Last-Modified 的标准格式为: `<day-name>, <day> <month> <year> <hour>:<minute>:<second> GMT`，如：Last-Modified : Fri , 12 May 2021 17:53:34 GMT，若源站对应的 HTTP Response Header 中无 Cache-Control 或 Expires 字段，且已开启启发式缓存，但您源站响应头的 Last-Modified 非标准格式，则 Last-Modified 的时间会默认设置为
- Last-Modified: Thu, 01 Jan 1970 00:00:00 GMT
+ `Last-Modified: Thu, 01 Jan 1970 00:00:00 GMT`
 
 
 #### 配置约束
