--- a/product/存储与CDN/多媒体处理/控制台指南/任务.md
+++ b/product/存储与CDN/多媒体处理/控制台指南/任务.md
@@ -1,6 +1,6 @@
 ## 简介
 
-针对已存在于存储桶中的文件，您可创建任务进行媒体处理操作。目前支持创建**音视频转码**、**极速高清转码**、**广电专业格式转码**、**精彩集锦**、**人声分离**、**音视频拼接**、**视频截帧**、**视频转动图**、**智能封面**、**视频增强**、**超分辨率**、**音视频分段**、**SDR to HDR**、**图片处理** 、**数字水印提取**任务。任务创建基于模板功能，您可直接使用数据万象提供的系统预设模板，也可自定义模板，模板详情请见 [模板文档](https://cloud.tencent.com/document/product/1545/65176)。
+针对已存在于存储桶中的文件，您可创建任务进行多媒体处理操作。目前支持创建**音视频转码**、**极速高清转码**、**广电专业格式转码**、**精彩集锦**、**人声分离**、**音视频拼接**、**视频截帧**、**视频转动图**、**智能封面**、**视频增强**、**超分辨率**、**音视频分段**、**SDR to HDR**、**图片处理** 、**数字水印提取**任务。任务创建基于模板功能，您可直接使用数据万象提供的系统预设模板，也可自定义模板，模板详情请见 [模板文档](https://cloud.tencent.com/document/product/1545/65176)。
 
 >?
 >- 任务目前支持处理 3gp、asf、avi、dv、flv、f4v、m3u8、m4v、mkv、mov、mp4、mpg、mpeg、mts、ogg、rm、rmvb、swf、vob、wmv、webm、mp3、aac、flac、amr、m4a、wma、wav 格式的文件，您在发起媒体处理请求时，请务必输入完整的文件名和文件格式，否则无法识别格式和处理。
