--- a/product/视频服务/实时音视频/产品动态.md
+++ b/product/视频服务/实时音视频/产品动态.md
@@ -2,6 +2,18 @@
 <table>
 <tr><th width="20%">动态名称</th>  <th width="50%">动态描述</th>  <th width="15%">发布时间</th>  <th width="15%">相关文档</th>
 </tr><tr>
+<td>Version 9.8 版本发布</td>
+<td> 全功能：<ul style="margin:0">
+优化视频场景下的性能。
+</ul>
+<br>Windows：<ul style="margin:0">
+<li>新增“重金属”、“萝莉音”等音效接口，详见 <code>ITXAudioEffectManager.setVoiceChangerType</code>。</li>
+<li>支持本地画面被暂停期间设置替代的图片进行推流，即垫片推流。</li>
+</ul>
+</td>
+<td>2022-04-21</td>
+<td><a href="https://cloud.tencent.com/document/product/647/32689">SDK 下载</a></td>
+</tr><tr>
 <td>Version 9.7 版本发布</td>
 <td> iOS&Android：<ul style="margin:0">
 优化 Music 音质的效果。
@@ -16,6 +28,7 @@
 <td><a href="https://cloud.tencent.com/document/product/647/32689">SDK 下载</a></td>
 </tr>
 </table>
+
 
 ## 2022年03月
 <table>
