--- a/product/数据库/云数据库 CynosDB/购买指南/产品价格.md
+++ b/product/数据库/云数据库 CynosDB/购买指南/产品价格.md
@@ -1,4 +1,5 @@
 本文为您介绍 TDSQL-C MySQL 版计费价格相关说明。
+
 ## 计费说明
 >!增值服务为单独计费，与计算节点和存储空间计费无关，详细请参见 [增值服务价格说明](#ZZFWJGSM)。
 >
@@ -114,7 +115,8 @@ TDSQL-C MySQL 版采用计算和存储分离的架构，单个集群支持购买
 
 ## [增值服务价格说明](id:ZZFWJGSM)
 ### 备份空间价格
-目前备份空间的费用暂时免费。
+备份空间的费用暂时免费。
+
 ### 数据库审计价格
 数据库审计按照审计日志存储量进行按量计费。每小时为一个计费周期，不足一小时的按一小时计费。
 
@@ -124,28 +126,28 @@ TDSQL-C MySQL 版采用计算和存储分离的架构，单个集群支持购买
 | 其他国家和地区 | 0.015 |
 
 ## 费用计算示例
-### 示例一、计算节点和存储空间计费模式均为包年包月
+### 示例一：计算节点和存储空间计费模式均为包年包月
 用户在北京五区，购买一个规格为1核2GB、实例数为1的 TDSQL-C MySQL 版集群，购买了10GB的存储空间，购买时长为1个月。
 
 当月的计算节点费用 = 90元/月 × 1个月 × 1 = 90元
 当月的存储空间费用 = 1.3968元/GB/月 × 10GB = 13.968元
 当月的总费用 = 计算节点费用 + 存储空间费用 = 90元 + 13.968元 = 103.968元
 
-### 示例二、计算节点和存储空间计费模式均为按量计费
+### 示例二：计算节点和存储空间计费模式均为按量计费
 用户在北京五区，购买一个规格为1核2GB、实例数为1的 TDSQL-C MySQL 版集群，每日使用10GB的存储空间。
 
 当日的计算节点费用 = 0.34元/小时 × 24小时 × 1 = 8.16元
 当日的存储空间费用 = 0.00486元/GB/小时 × 10GB × 24小时 = 1.1664元
 当日的总费用 = 计算节点费用 + 存储空间费用 = 8.16元 + 1.1664元 = 9.3264元
 
-### 示例三、计算节点的计费模式为包年包月，存储空间的计费模式为按量计费
+### 示例三：计算节点的计费模式为包年包月，存储空间的计费模式为按量计费
 用户在北京五区，购买一个规格为1核2GB、实例数为1的 TDSQL-C MySQL 版集群，使用了10天，一共使用了30GB的存储空间。
 
 当月的计算节点费用 = 90元/月 × 1个月 × 1 = 90元
 使用10天的存储空间费用 = 0.00486元/GB/小时 × 30GB × 24小时 × 10 = 34.992元
-购买后10天的总费用 = 计算节点费用 + 存储空间费用 = 90元 + 34.992元 = 124.99元
+购买后10天的总费用 = 计算节点费用 + 存储空间费用 = 90元 + 34.992元 = 124.992元
 
-### 示例四、计算节点的计费模式为 Serverless，存储空间的计费模式为按量计费
+### 示例四：计算节点的计费模式为 Serverless，存储空间的计费模式为按量计费
 用户在北京五区，购买一个计算规格为最小0.25CCU/s、最大2CCU/s的 Serverless 数据库，一天中一直使用了10GB的存储空间，及一天中使用了1个小时的 Serverless，该小时内 CCU 平均用量为1.5CCU/s。
 
 当日的计算节点费用 = 1.5个 x 3600秒 x 0.000095元/个/秒 = 0.513元
