--- a/product/数据库/云数据库 CynosDB/购买指南/产品价格.md
+++ b/product/数据库/云数据库 CynosDB/购买指南/产品价格.md
@@ -100,7 +100,7 @@ TDSQL-C MySQL 版采用计算和存储分离的架构，单个集群支持购买
 >- CCU（CynosDB Compute Unit）为 Serverless 的计算计费单位，一个 CCU 近似等于1个 CPU 和 2GB 内存的计算资源，每个计费周期的 CCU 使用数量为：`数据库所使用的 CPU 核数` 与 `内存大小的1/2` 二者中取最大值。
 >- 您可参考 [产品规格](#cpgg) 选择相应的 CCU 最大最小值，存储空间上限与最大值相对应的 [普通计算节点规格](#cpgg) 的最大存储空间一致。
 
-## 存储空间价格
+## [存储空间价格](id:cckjjg)
 <table>
 <thead><tr>
 <th colspan=2>广州、上海、北京、南京</th><th colspan=2>中国香港、中国台北、新加坡、硅谷、法兰克福、东京、弗吉尼亚</th></tr>
