--- a/product/数据库/云数据库 CynosDB/购买指南/变配说明.md
+++ b/product/数据库/云数据库 CynosDB/购买指南/变配说明.md
@@ -30,3 +30,6 @@
 
 ### 包年包月集群变配费用
 包年包月模式下，会根据预先购买的存储空间进行收费，存储空间支持阶梯式收费，详细费用请参见 [存储空间价格](https://cloud.tencent.com/document/product/1003/73002#cckjjg)。
+
+## 相关文档
+[调整实例配置](https://cloud.tencent.com/document/product/1003/62707)
