--- a/product/数据库/云数据库 CynosDB/购买指南/最佳实践/如何选择存储空间计费模式.md
+++ b/product/数据库/云数据库 CynosDB/购买指南/最佳实践/如何选择存储空间计费模式.md
@@ -1,23 +1,28 @@
 存储空间是指数据文件、索引文件、日志文件（rodo log、undo log、slow log、error log 等）和临时文件等占用的空间。被占用的存储空间会产生费用。
 
 本文为您介绍如何选择存储空间的计费模式。
-## 按量计费规则
-TDSQL-C MySQL 版存储空间按量计费模式是按每小时每GB收费，购买时无需选择存储空间容量，随着数据增长而自动扩容，只按实际数据量所占的存储空间大小收费，您可以在集群详情页面的配置信息里查看数据库存储用量详情以及当前计算节点规格下的存储空间上限。
+
+## 按量计费模式
+### 按量计费规则
+TDSQL-C MySQL 版存储空间按量计费模式是按每小时每GB收费，购买时无需选择存储空间容量，随着数据增长而自动扩容，只按实际数据量所占的存储空间大小收费，您可以在 [控制台](https://console.cloud.tencent.com/cynosdb) 集群详情页面的配置信息里查看数据库存储用量详情，以及当前计算节点规格下的存储空间上限。
 ![](https://qcloudimg.tencent-cloud.cn/raw/7b46889a960c224906cee9d589e8672e.png)
-## 按量计费价格
+
+### 按量计费价格
 - 广州、上海、北京、南京：0.00486元/GB/小时。
 - 中国香港、中国台北、新加坡、硅谷、法兰克福、东京、弗吉尼亚：0.005328元/GB/小时。
 
-## 按量计费适用场景
+### 按量计费适用场景
 适合业务量有瞬间大幅波动的业务场景，用完可立即释放实例，节省成本。
 
-## 包年包月计费规则
+## 包年包月模式
+### 包年包月计费规则
 TDSQL-C MySQL 版存储空间包年包月的计费模式，是仅当计算节点的计费模式选择为包年包月时才能选择。当您需要的存储空间较大时，相比按实际使用存储空间量收费，预付费包年包月能够享受一定的折扣优惠。
-## 包年包月计费价格
+
+### 包年包月计费价格
 - 广州、上海、北京、南京：0 - 3000GB（不含3000GB）1.3968元/GB/月，3000GB及以上1.2804元/GB/月。
 - 中国香港、中国台北、新加坡、硅谷、法兰克福、东京、弗吉尼亚：0 - 3000GB（不含3000GB）1.5264元/GB/月，3000GB及以上1.3992元/GB/月。
 
-## 包年包月计费适用场景
+### 包年包月计费适用场景
 适合业务量较稳定的长期需求，费用较按量计费模式更为低廉，支持阶梯式收费，性价比更高。
 
 ## 不同存储空间的购买方案价格对比
@@ -26,7 +31,7 @@ TDSQL-C MySQL 版存储空间包年包月的计费模式，是仅当计算节点
 <table>
 <thead><tr>
 <th rowspan=2 >存储空间（GB）</th>
-<th colspan=2>中国内地</th><th colspan=2>中国香港、中国台北及海外</th></tr>
+<th colspan=2>中国大陆</th><th colspan=2>中国香港、中国台北及海外</th></tr>
 <tr>
 <th>按量计费（元/月）</th><th>包年包月（元/月）<br>相当于按量计费的37折到4折</th>
 <th>按量计费（元/月）</th><th>包年包月（元/月）<br>相当于按量计费的36折到4折</th>
