--- a/product/数据库/云数据库 CynosDB/最佳实践/如何选择存储空间计费模式.md
+++ b/product/数据库/云数据库 CynosDB/最佳实践/如何选择存储空间计费模式.md
@@ -31,7 +31,7 @@ TDSQL-C MySQL 版存储空间包年包月的计费模式，是仅当计算节点
 <table>
 <thead><tr>
 <th rowspan=2 >存储空间（GB）</th>
-<th colspan=2>中国大陆</th><th colspan=2>中国香港、中国台北及海外</th></tr>
+<th colspan=2>中国大陆</th><th colspan=2>中国香港、中国台北及其他国家和地区</th></tr>
 <tr>
 <th>按量计费（元/月）</th><th>包年包月（元/月）<br>相当于按量计费的37折到4折</th>
 <th>按量计费（元/月）</th><th>包年包月（元/月）<br>相当于按量计费的36折到4折</th>
