--- a/product/计算与网络/容器服务/常见问题/集群常见问题.md
+++ b/product/计算与网络/容器服务/常见问题/集群常见问题.md
@@ -11,14 +11,15 @@
 
 ### 创建集群支持什么类型的机型？
 
-支持所有按量计费的系统盘是云盘的机型。
+支持 CVM 提供的标准型、计算型、高 IO 型、GPU 型、黑石型中绝大部份机器，具体以 TKE 控制台展示的机型为主。
 
 ### 当前容器服务宿主机支持什么操作系统？
+当前支持操作系统详情见 TKE 支持的 [公共镜像列表](https://cloud.tencent.com/document/product/457/68289)。  
 
-当前支持 Ubuntu 16.04、CentOS 7.2。如有其他操作系统需求可通过 [在线咨询](https://cloud.tencent.com/online-service?from=doc_457) 联系我们。
 
 ### 容器服务如何设置节点的自定义 Kubelet 参数？
-您可以在 [**新增节点**](https://cloud.tencent.com/document/product/457/32203) 页面、**添加已有节点**页面、**[新增节点池](https://cloud.tencent.com/document/product/457/43735)** 页面设置节点的自定义 Kubelet 参数。如下图所示：
+- 该功能白名单形式开放，您可以通过 [提交工单](https://console.cloud.tencent.com/workorder/category) 申请使用。
+- 在 [**新增节点**](https://cloud.tencent.com/document/product/457/32203) 页面、**添加已有节点**页面、**[新增节点池](https://cloud.tencent.com/document/product/457/43735)** 页面设置节点的自定义 Kubelet 参数。如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/4fd24e5d923fd3969927564dc489c695.png)
 
  
