--- a/product/计算与网络/容器服务/常见问题/集群常见问题.md
+++ b/product/计算与网络/容器服务/常见问题/集群常见问题.md
@@ -11,7 +11,7 @@
 
 ### 创建集群支持什么类型的机型？
 
-支持 CVM 提供的标准型、计算型、高 IO 型、GPU 型、黑石型中绝大部份机器，具体以 TKE 控制台展示的机型为主。
+支持 CVM 提供的标准型、计算型、高 IO 型、GPU 型、黑石型中等机器，具体以 TKE 控制台展示的机型为主。
 
 ### 当前容器服务宿主机支持什么操作系统？
 当前支持操作系统详情见 TKE 支持的 [公共镜像列表](https://cloud.tencent.com/document/product/457/68289)。  
