--- a/product/安全服务/数据安全网关/操作指南（SaaS 型）/资产管理/数据库管理/数据库管理/编辑数据库资产.md
+++ b/product/安全服务/数据安全网关/操作指南（SaaS 型）/资产管理/数据库管理/数据库管理/编辑数据库资产.md
@@ -8,7 +8,7 @@
 2. 在 SaaS 型堡垒机控制台，在左侧导航选择**资产管理** > **数据库资产**，进入数据库资产页面。
 3. 在数据库资产页面，单击**编辑**，弹出编辑资产信息窗口。
 ![](https://qcloudimg.tencent-cloud.cn/raw/12d5b8eccf6fe649f6e7ceda0ac3a8e2.png)
-4. 在编辑资产信息窗口，可修改资产相关信息。
+4. 在资产信息窗口，可修改资产相关信息。
 ![](https://qcloudimg.tencent-cloud.cn/raw/0a544812199cbf0c9e6c89becd95a45c.png)
 5. 修改完所需内容，单击**确定**，即可保存资产信息。
 
