--- a/product/计算与网络/事件总线/服务等级协议.md
+++ b/product/计算与网络/事件总线/服务等级协议.md
@@ -32,16 +32,30 @@
 #### 3.1 赔偿标准
 1. 赔偿以腾讯云发放代金券的形式实现，您收到代金券后，应当遵守代金券的使用规则（包括使用期限等，具体以腾讯云官网发布的代金券相关规则为准）。发放的代金券不能折现、不开具发票，仅限您通过您的腾讯云账户购买本服务，不能购买其他的腾讯云服务，您也不可以将代金券进行转让、赠予等。
 2. 如果某服务月度没有达到服务可用性标准，赔偿额按照相应未达标服务月度单独计算，赔偿总额不超过相应未达标服务月度内您就本服务支付的相应月度服务费（此处的月度服务费不含用代金券、优惠券、服务费减免等抵扣的费用）。
-
-| 服务月度的服务可用性 | 赔偿代金券金额 | 
-|---------|---------|
-| 低于99.95%但等于或高于99% | 	月度服务费的10% | 
-|低于99%但等于或高于95%|	月度服务费的25%|
-| 低于95%|	月度服务费的100% |
+<table>
+<thead>
+<tr>
+<th>服务月度的服务可用性</th>
+<th>赔偿代金券金额</th>
+</tr>
+</thead>
+<tbody><tr>
+<td>低于99.95%但等于或高于99%</td>
+<td>月度服务费的10%</td>
+</tr>
+<tr>
+<td>低于99%但等于或高于95%</td>
+<td>月度服务费的25%</td>
+</tr>
+<tr>
+<td>低于95%</td>
+<td>月度服务费的100%</td>
+</tr>
+</tbody></table>
 
 #### 3.2 赔偿申请时限
 （1）如某服务月度没有达到服务可用性标准，您可以在没有达标的相应服务月度结束后的次月的第五（5）个工作日后，仅通过您相应账户的工单系统提出赔偿申请。您提出赔偿申请后腾讯云会进行相应核实，对于服务月度的服务可用性的计算，若双方出现争议的，双方均同意最终以腾讯云的后台记录为准。
-（2）您最晚提出赔偿申请的时间不应超过未达标的相应服务月度结束后六十（60）个自然日，。如果您在未达标的相应服务月度结束后的六十（60）日内未提出赔偿申请或者在未达标的相应服务月度结束后的六十（60）日之后才提出赔偿申请或者您通过非本协议约定的方式提出申请的，均视为您自动放弃要求赔偿的权利及向腾讯云主张其他权利的权利，腾讯云有权不受理您的赔偿申请，不对您进行任何赔偿或补偿。
+（2）您最晚提出赔偿申请的时间不应超过未达标的相应服务月度结束后六十（60）个自然日。如果您在未达标的相应服务月度结束后的六十（60）日内未提出赔偿申请或者在未达标的相应服务月度结束后的六十（60）日之后才提出赔偿申请或者您通过非本协议约定的方式提出申请的，均视为您自动放弃要求赔偿的权利及向腾讯云主张其他权利的权利，腾讯云有权不受理您的赔偿申请，不对您进行任何赔偿或补偿。
 
 
 
