--- a/product/数据库/云存储Redis/操作指南/网络与安全/配置安全组.md
+++ b/product/数据库/云存储Redis/操作指南/网络与安全/配置安全组.md
@@ -23,7 +23,7 @@
 
 ### [步骤二：设置安全组规则](id:Step2)
 
-### 入站规则
+#### 入站规则
 
 1. 在**安全组规则**页面，选择**入站规则**页签， 单击 **添加规则**。
 2. 在弹出**添加入站规则**的对话框中，设置规则。
@@ -49,7 +49,7 @@
     - **备注**：自定义，简短地描述规则，便于后期管理。
 4. 单击**完成**，完成安全组入站规则的添加。
    
-### 出站规则
+#### 出站规则
 
 1. 在**安全组规则**页面，选择**出站规则**页签， 单击 **添加规则**。
 2. 在弹出**添加出站规则**的对话框中，设置规则。
