--- a/product/数据库/TDSQL-H LibraDB/动态与公告/产品动态.md
+++ b/product/数据库/TDSQL-H LibraDB/动态与公告/产品动态.md
@@ -4,17 +4,17 @@
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
-<td><b>南京三区</b>开服</td>
-<td>TDSQL-H LibraDB支持的地域增加<b>南京三区</b>。</td>
+<td>南京三区开服</td>
+<td>TDSQL-H LibraDB 支持的地域增加南京三区。</td>
 <td><a href="https://cloud.tencent.com/document/product/1488/63530" target="_blank">地域和可用区</a></td></tr>
 <tr>
 <td>支持按量计费转包年包月</td>
-<td>支持对已创建的TDSQL-H LibraDB实例计费模式由按量计费转为包年包月。</td>
-<td><a href="" target="_blank">按量计费转包年包月</a></td></tr>
+<td>支持对已创建的 TDSQL-H LibraDB 实例计费模式由按量计费转为包年包月。</td>
+<td><a href="https://cloud.tencent.com/document/product/1488/73018" target="_blank">按量计费转包年包月</a></td></tr>
 <tr>   
-<td>支持开启节点IP</td>
-<td>支持开启节点IP功能，开启后会为TDSQL-H LibraDB实例的LibraSQL分析引擎各节点分配VIP。</td>
-<td><a href="" target="_blank">开启节点IP</a></td></tr>
+<td>支持开启节点 IP</td>
+<td>支持开启节点 IP 功能，开启后会为 TDSQL-H LibraDB 实例的 LibraSQL 分析引擎各节点分配 VIP。</td>
+<td><a href="https://cloud.tencent.com/document/product/1488/73019" target="_blank">开启节点 IP</a></td></tr>
 </tbody></table>
 
 ## 2022年03月
@@ -23,8 +23,8 @@
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
-<td>CDC数据对比</td>
-<td>支持对具体的CDC任务创建数据对比，验证CDC任务中OLTP数据同步至LibraSQL的数据是否一致。</td>
+<td>CDC 数据对比</td>
+<td>支持对具体的 CDC 任务创建数据对比，验证 CDC 任务中 OLTP 数据同步至 LibraSQL 的数据是否一致。</td>
 <td><a href="https://cloud.tencent.com/document/product/1488/71940" target="_blank">创建数据对比任务</a></td></tr>
 </tbody></table>
 
@@ -35,6 +35,6 @@
 <tbody>
 <tr>
 <td>商业化发布</td>
-<td>TDSQL-H LibraDB正式商业化。提供北京、上海和广州地域服务。</td>
+<td>TDSQL-H LibraDB 正式商业化。提供北京、上海和广州地域服务。</td>
 <td><a href="https://cloud.tencent.com/document/product/1488/60828" target="_blank">产品概述</a></td></tr>
 </tbody></table>
