--- a/product/数据库/TDSQL-H LibraDB/产品简介/地域和可用区.md
+++ b/product/数据库/TDSQL-H LibraDB/产品简介/地域和可用区.md
@@ -7,7 +7,7 @@
 ### 相关特性
 
 - 不同地域之间的网络完全隔离，不同地域之间的云产品**默认不能通过内网通信**。
-- 处于不同私有网络的云产品，可以通过[云联网](https://cloud.tencent.com/document/product/877)进行通信，此通信方式较为高速、稳定。
+- 处于不同私有网络的云产品，可以通过 [云联网](https://cloud.tencent.com/document/product/877) 进行通信，此通信方式较为高速、稳定。
 
 ## 可用区
 
@@ -17,10 +17,9 @@
 
 ### 相关特性
 
-处于相同地域不同可用区，但在同一个私有网络下的云产品之间均通过内网互通，可以直接使用[内网 IP](https://cloud.tencent.com/document/product/213/5225)访问。
+处于相同地域不同可用区，但在同一个私有网络下的云产品之间均通过内网互通，可以直接使用 [内网 IP](https://cloud.tencent.com/document/product/213/5225) 访问。
 
->?
->内网互通是指同一账户下的资源互通，不同账户的资源内网完全隔离。
+>?内网互通是指同一账户下的资源互通，不同账户的资源内网完全隔离。
 
 ## 地域和可用区列表
 
