--- a/product/存储与CDN/日志服务/购买指南/计费概述.md
+++ b/product/存储与CDN/日志服务/购买指南/计费概述.md
@@ -60,7 +60,7 @@
 
 | 计费项       | 说明                                                         | 计费公式                             |
 | ------------ | ------------------------------------------------------------ | ------------------------------------ |
-| 数据加工费用 | 根据数据加工的日志数据量大小进行计费。<br />**注意：**<br />日志数据量大小与日志上传时是否压缩无关，均按照未压缩的原始日志数据量计算，例如原始日志数据量为4GB，压缩后的写流量为1GB（按压缩率为1:4计算，压缩率与日志实际内容有关，一般为1:4～1:10），进行数据加工时的数据量大小为4GB。 | 数据加工费用=单价 x 加工的日志数据量 |
+| 数据加工费用 | 根据数据加工的日志数据量大小进行计费。<br />**注意：**<br />日志数据量大小与日志上传时是否压缩无关，均按照未压缩的原始日志数据量计算，例如原始日志数据量为4GB，压缩后的写流量为1GB（按压缩率为1:4计算，压缩率与日志实际内容有关，一般为1:4 - 1:10），进行数据加工时的数据量大小为4GB。 | 数据加工费用=单价 x 加工的日志数据量 |
 
 
 
@@ -83,45 +83,39 @@
 
 <table>
 <thead>
-<tr>
-<th>计费项</th>
-<th>说明</th>
-<th>计量</th>
-<th>单价</th>
-<th>费用</th>
-</tr>
+<tr><th>计费项</th><th>说明</th><th>计量</th><th>单价</th><th>费用</th></tr>
 </thead>
 <tbody><tr>
 <td>写流量费用</td>
-<td>使用 LogListener 上传日志会进行压缩，压缩后流量2.33GB。</td>
-<td>2.33GB</td>
+<td>使用 LogListener 上传日志会进行压缩，压缩率约为1:4，压缩后流量为2.33GB。</td>
+<td>9.31GB x (1:4) = 2.33GB</td>
 <td>0.18元/GB/日</td>
 <td>0.419元/日</td>
 </tr>
 <tr>
 <td>标准索引流量费用</td>
-<td>开启全文索引后，产生9.31GB索引流量。</td>
-<td>9.31GB</td>
+<td>开启全文索引，相当于100%的字段开启了索引，产生9.31GB索引流量。</td>
+<td>9.31GB x 100% = 9.31GB</td>
 <td>0.35元/GB/日</td>
 <td>3.259元/日</td>
 </tr>
 <tr>
 <td>标准日志存储费用</td>
-<td>每天上传2.33GB日志，保存15天后平均存储量34.95GB（2.33GB x 15天）。</td>
-<td>34.95GB</td>
+<td>每天上传9.31GB日志，压缩后约为2.33GB，保存15天时日平均存储量为34.95GB。</td>
+<td>9.31GB x (1:4) x 15 = 34.95GB</td>
 <td>0.0115元/GB/日</td>
 <td>0.402元/日</td>
 </tr>
 <tr>
 <td>标准索引存储费用</td>
-<td>每天产生9.31GB索引，保存15天后平均存储量139.65GB （9.31GB x 15天）。</td>
-<td>139.65GB</td>
+<td>每天产生9.31GB索引，保存15天后平均存储量139.65GB。</td>
+<td>9.31GB x 15 = 139.65GB</td>
 <td>0.0115元/GB/日</td>
 <td>1.606元/日</td>
 </tr>
 <tr>
 <td>服务请求费用</td>
-<td>使用 Loglistener 会批量上传，将产生10万次上传请求。</td>
+<td>使用 Loglistener 会将日志分组批量上传，产生约10万次上传请求。</td>
 <td>0.1百万次</td>
 <td>0.15元/百万次/日</td>
 <td>0.015元/日</td>
@@ -139,10 +133,10 @@
 </tr>
 </tbody></table>
 
-从计费项费用中可以发现，索引流量及索引存储费用占总费用比例最高达到84%，主要由以下几方面导致：
+从计费项费用中可以发现，索引流量及索引存储费用最高，主要由以下几方面导致：
 
 - 索引是日志检索分析的核心，没有索引时将完全无法检索日志数据，索引流量的单价（0.35元/GB/日）因此也高于写流量（0.18元/GB/日）。
-- 如果上传日志采用压缩时，写流量及日志存储会按压缩后的日志数据量计算，而索引流量及索引存储需按照未压缩的原始数据量计算。由于日志的压缩率一般在1:4～1:10之间，索引流量及索引存储的计量会是写流量及日志存储的4 - 10倍。
+- 如果上传日志采用压缩时，写流量及日志存储会按压缩后的日志数据量计算，而索引流量及索引存储需按照未压缩的原始数据量计算。由于日志的压缩率一般在1:4 - 1:10之间，索引流量及索引存储的计量会是写流量及日志存储的4 - 10倍。
 
 因此，如需降低产品使用成本，可合理的调整索引配置，以降低索引流量及索引存储。
 
@@ -163,7 +157,7 @@ time: [Tue Jan 22 14:49:45 CST 2019 +0800]
 ```
 
 - 若开启全文索引，该条日志产生的索引大小为172Bytes（所有的字段 key 及字段 value 的大小），会相应地产生索引流量及索引存储。
-- 若仅为 request 及 status 字段开启键值索引，不开启全文索引，该条日志产生的索引大小为48Bytes（request 及 status 的 key 及 value 的大小），索引流量及索引存储降低为全文索引的27.9%。但需注意，此时将仅能通过 request 及 status 字段检索分析日志，其他字段仅供查看。
+- 若仅为 request 及 status 字段开启键值索引，不开启全文索引，该条日志产生的索引大小为48Bytes（request 及 status 的 key 及 value 的大小，相当于为48Bytes / 172Bytes = 27.9%的字段开启了键值索引），索引流量及索引存储降低为全文索引的27.9%。但需注意，此时将仅能通过 request 及 status 字段检索分析日志，其他字段仅供查看。
 
 更多降低产品使用成本的方式可参考 [节省产品使用成本](https://cloud.tencent.com/document/product/614/69306)。
 
