--- a/product/计算与网络/专线接入/快速入门.md
+++ b/product/计算与网络/专线接入/快速入门.md
@@ -30,7 +30,7 @@
 <tr><td>专线名称</td><td>定义物理专线的名称，例如“北京 IDC 专线”</td></tr>
 <tr><td>地域</td><td>选择北京</td></tr><tr>
 <td>接入点</td>
-<td>就近选择接入点，可使用搜索工具查看接入点到 IDC 的地理路径，具体请参见 <a href="https://cloud.tencent.com/document/product/216/53348">搜索接入点位置</a>，或者查阅<a href="https://cloud.tencent.com/document/product/216/58779"> 专线接入点</a>。</td></tr>
+<td>就近选择接入点，可使用搜索工具查看接入点到 IDC 的地理路径，具体请参见 <a href="https://cloud.tencent.com/document/product/216/53348">搜索接入点位置</a>，或者查阅<a href="https://cloud.tencent.com/document/product/216/58779"> 专线接入点</a></td></tr>
 <tr>
 <td>物理线路提供商</td>
 <td>选择符合<a href="https://cloud.tencent.com/document/product/216/45875">《专线接入审核标准》</a>的运营商，本示例中选择<b>中国电信</b></td></tr>
