--- a/product/计算与网络/专线接入/快速入门.md
+++ b/product/计算与网络/专线接入/快速入门.md
@@ -149,6 +149,6 @@
 ![](https://main.qcloudimg.com/raw/fefa39a27dfa55c3a0e0634803ccae19.png)
 3. 在“告警策略”列表中单击目标默认告警策略的名称。
 4. 在“告警通知”区域选择通知模板。
-告警接收人在模板中配置。如果没有可复用的模版，请单击**新建模版**依据界面提示完成创建，然后在告警通知区域选择创建的通知模板。
+告警接收人在模板中配置。如果没有可复用的模板，请单击**新建模板**依据界面提示完成创建，然后在告警通知区域选择创建的通知模板。
 ![](https://main.qcloudimg.com/raw/62ada2ac7e647380a2d08ec575b766f5.png)
 
