--- a/product/数据库/云数据库 CynosDB/购买指南/产品价格.md
+++ b/product/数据库/云数据库 CynosDB/购买指南/产品价格.md
@@ -149,7 +149,7 @@ TDSQL-C MySQL 版采用计算和存储分离的架构，单个集群支持购买
 ## [存储空间价格](id:cckjjg)
 <table>
 <thead><tr>
-<th colspan=2>广州、上海、北京、南京</th><th colspan=2>中国香港、中国台北、新加坡、硅谷、法兰克福、东京、弗吉尼亚</th></tr>
+<th colspan=2>广州、上海、北京、南京、深圳、北京金融</th><th colspan=2>中国香港、中国台北、新加坡、硅谷、法兰克福、东京、弗吉尼亚</th></tr>
 <tr>
 <th>按量计费价格（元/GB/小时）</th><th>包年包月价格（元/GB/月）</th>
 <th>按量计费价格（元/GB/小时）</th><th>包年包月价格（元/GB/月）</th>
