--- a/product/解决方案/直播转录制方案/控制台指南/处理视频文件/视频播放.md
+++ b/product/解决方案/直播转录制方案/控制台指南/处理视频文件/视频播放.md
@@ -55,7 +55,7 @@
 
 
 ## 视频预览
-如果该 fileID 存在对应用于播放的转自适应码流名称和缩略图预览的雪碧图，则您可以直接进行 [Web 播放器](#web_play) 和 [终端播放器](#terminal_play) 预览。
+如果该 fileID 存在对应用于播放的转自适应码流名称和缩略图预览的雪碧图，则您可以直接进行 [Web 播放器](#web_play)预览。
 
 [](id:web_play)
 ### Web 播放器
