Update 12. Cocoapods 制品库.md

--- a/product/开发者工具/CODING DevOps/制品库/快速入门/12. Cocoapods 制品库.md
+++ b/product/开发者工具/CODING DevOps/制品库/快速入门/12. Cocoapods 制品库.md
@@ -26,7 +26,7 @@ $ brew install cocoapods
 ## 新建 Demo 项目[](id:init)
 本节对如何快速创建一个 Demo Cocoapods 制品 提供指引，若您已熟悉 Cocoapods 制品制作可以跳过本节。
 
-在任意目录执行创建命令，并根据命令行提示选择需要的示例模版：
+在任意目录执行创建命令，并根据命令行提示选择需要的示例模板：
 <dx-codeblock>
 :::  bash
 pod lib create <自定义 pod 名称>
