--- a/product/数据库/云数据库 CynosDB/购买指南/计费概述.md
+++ b/product/数据库/云数据库 CynosDB/购买指南/计费概述.md
@@ -7,7 +7,7 @@
 | 计算节点 | <li>计算节点包括读写节点和只读节点。<li>计算节点的费用与节点所在地域、节点规格以及使用时长有关。| 购买/使用计费 | <li>包年包月<li>按量计费<li>Serverless |
 | 存储空间 | <li>存储空间是指数据文件、索引文件、日志文件（rodo log、undo log、slow log、error log 等）和临时文件等占用的空间。被占用的存储空间会产生费用。<li>存储空间的费用与数据量大小和存储时长有关。| 购买/使用计费 | <li>包年包月<li>按量计费 |
 | 备份存储空间 | <li>备份文件会占用一定的存储空间。备份方式包括自动备份和手动备份，备份对象包括日志备份和数据备份，以上占用的空间均会算入此计费项。<li>备份文件产生的费用与容量和保存时长有关。| 暂时免费 | 按量计费 |
-| 数据库审计 | <li>TDSQL-C MySQL 版提供数据库审计能力，记录对数据库的访问及 SQL 语句执行情况，帮助企业进行风险控制，提高数据安全等级。<li>仅当开启了数据库审计后，您才需要支付数据库审计的费用。| 购买/使用计费 | 按量计费 |
+| 数据库审计 | <li>TDSQL-C MySQL 版提供数据库审计能力，记录对数据库的访问及 SQL 语句执行情况，帮助企业进行风险控制，提高数据安全等级。<li>仅当开启了数据库审计后，您才需要支付数据库审计的费用。</li>| 购买/使用计费 | 按量计费 |
 
 ## 支持的计费模式
 
@@ -16,3 +16,5 @@
 | 包年包月                                                     | MySQL | [预付费模式](https://cloud.tencent.com/document/product/555/9618)，即在新建实例时支付费用。 | 适合业务量较稳定的长期需求，费用较按量计费模式更为低廉，且购买时长越长，折扣越多。 |
 | 按量计费                                                     | MySQL | [后付费模式](https://cloud.tencent.com/document/product/555/9617)，即先按需申请资源使用，在结算时会按您的实际资源使用量收取费用。 | 适合业务量有瞬间大幅波动的业务场景，用完可立即释放实例，节省成本。 |
 | Serverless | MySQL             | [后付费模式](https://cloud.tencent.com/document/product/555/9617)，即计算先按需设置最大和最小算力范围，在结算时会按您的实际计算和存储资源使用量收取费用。 | 适合开发测试等低频和不确定负载的业务场景，按使用计费，不用不计费。<dx-alert infotype="explain" title="说明">Serverless 在初始化时会按照最小 CPU 进行启动，启动十分钟之后，如果没有请求才会进行降级，因此购买之后即使不使用也会有一个最小十分钟的计算节点计费。</dx-alert> |
+
+
