--- a/product/移动与通信/腾讯移动推送/API 文档/统计相关接口/设备分布查询.md
+++ b/product/移动与通信/腾讯移动推送/API 文档/统计相关接口/设备分布查询.md
@@ -18,7 +18,7 @@
 | 参数名称  | 必选 | 类型   | 描述       |
 | --------- | ---- | ------ | ---------- |
 | date | 是   | String | 查询日期<li>格式：YYYYMMDD<li>查询限制：当前日期1个月内 |
-| type | 是 | String | 查询维度：<li>city：城市<li>province：省份<li>app_version：app版本<li>sdk_version：sdk版本<li>system_version：系统版本<li>device_brand：手机品牌<li>device_version：设备型号 |
+| type | 是 | String | 查询维度：<li>city：城市<li>province：省份<li>app_version：App 版本<li>sdk_version：SDK 版本<li>system_version：系统版本<li>device_brand：手机品牌<li>device_version：设备型号 |
 
 #### 应答参数
 
