--- a/product/安全服务/网站管家/购买指南/计费概述.md
+++ b/product/安全服务/网站管家/购买指南/计费概述.md
@@ -10,7 +10,7 @@ Web 应用防火墙采取**套餐+扩展包**的方式进行计费：
 - **弹性计费**：用户在购买**基础套餐**或**基础套餐+QPS 扩展包后**，可选择开启 QPS 弹性防护，WAF 将对超量的 QPS 进行安全防护：
 	- 对开启弹性防护的用户，WAF 按照超量 QPS 收取对应的弹性防护费用，账单次日生成。
 	- 若未触发弹性防护，则不收取任何费用。
-- **专家计费**：Web 应用防火墙专家服务，通过建立微信群的方式和客户进行对接沟通，为客户提供安全咨询、评估、培训、通知等服务。
+- **专家服务**：Web 应用防火墙专家服务，通过建立微信群的方式和客户进行对接沟通，为客户提供安全咨询、评估、培训、通知等服务。
 
 >?Web 应用防火墙预付费到期处理说明，请参见腾讯云计费相关中 [预付费计费说明](https://cloud.tencent.com/document/product/555/9618)。
 
@@ -580,12 +580,12 @@ Web 应用防火墙采取**套餐+扩展包**的方式进行计费：
 #### 计费示例：
 若用户购买 WAF 旗舰版+10个 QPS 扩展包，且开启弹性防护，此时套餐规格为：20000QPS。某日用户 QPS 为 24000QPS，超量 QPS 为：4000QPS，则当日弹性防护费用为：4000 * 0.2 = 800元，且将在次日产生账单。
 
-### 专家计费价格说明
+### 专家服务价格说明
 Web 应用防火墙专家服务，通过建立微信群的方式和客户进行对接沟通，为客户提供安全咨询、评估、培训、通知等服务。通过向用户提供专业指导和修复建议的方式，协助其尽快修复云上业务，降低客户损失，同时为有高级安全需求的用户提供重点保护服务。
 <table>
 <thead>
 <tr>
-<th width="70%">专家计费</th>
+<th width="70%">专家服务</th>
 <th width="30%">费用 </th>
 </tr>
 </thead>
