--- a/product/数据库/云存储Redis/快速入门/连接数据库实例.md
+++ b/product/数据库/云存储Redis/快速入门/连接数据库实例.md
@@ -1,8 +1,8 @@
 ## 操作场景
 
-实例初始化完成之后，您便可以访问数据库，使用Redis命令进行数据库读写、查询等操作。本文介绍以下三种方式连接数据库。
+实例创建完成，状态为运行中，您便可以访问数据库，使用 Redis 命令进行数据库读写、查询等操作。本文介绍以下三种方式连接数据库。
 
-- 客户端工具连接：使用云服务器 CVM 通过自动分配给云数据库的内网地址连接数据库的方法，包括Linux云服务器与Windows云服务器。这种连接方式使用内网高速网络，延迟低。云服务器和数据库须是同一账号，且同一个[ VPC](https://cloud.tencent.com/document/product/215/20046) 内（保障同一个地域），或同在基础网络内。
+- 客户端工具连接：使用云服务器 CVM 通过自动分配给云数据库的内网地址连接数据库的方法，包括 Linux 云服务器与 Windows 云服务器。这种连接方式使用内网高速网络，延迟低。云服务器和数据库须是同一账号，且同一个[ VPC](https://cloud.tencent.com/document/product/215/20046) 内（保障同一个地域），或同在基础网络内。
 > ?
 > - 对于不同的 VPC 下（包括同账号/不同账号，同地域/不同地域）的云服务器和数据库，内网连接方式请参见 [云联网](https://cloud.tencent.com/document/product/877)。
 > - 不同 VPC 下的云服务器和数据库，也可通过外网地址连接，外网地址连接方式请参见  [配置外网地址](https://cloud.tencent.com/document/product/239/63527)。
