--- a/product/企业协同/腾讯会议/API 文档/REST APIs/企业云录制管理/获取会议录制操作明细（查看、下载）数据.md
+++ b/product/企业协同/腾讯会议/API 文档/REST APIs/企业云录制管理/获取会议录制操作明细（查看、下载）数据.md
@@ -1,5 +1,5 @@
 ## 接口描述
-**描述：**查询会议录制 ID 对应的操作记录，包括用户查看和下载，暂不支持 OAuth2.0 鉴权访问。
+**描述：**查询会议录制 ID 对应的操作记录，包括用户查看和下载，支持 OAuth2.0 鉴权调用。所需权限点为：查看会议录制（VIEW_VIDEO） 或 管理会议录制（MANAGE_VIDEO）。
 **接口请求方法：**GET
 **接口请求域名：**
 ```plaintext
