--- a/product/企业协同/腾讯会议/API 文档/REST APIs/企业云录制管理/查询会议纪要详情.md
+++ b/product/企业协同/腾讯会议/API 文档/REST APIs/企业云录制管理/查询会议纪要详情.md
@@ -1,13 +1,10 @@
 ## 接口描述
-**描述：**获取云录制会议纪要的详情，包含时间戳、文本等内容。暂不支持 OAuth 2.0 鉴权访问。
+**描述：**获取云录制会议纪要的详情，包含时间戳、文本等内容。支持 OAuth2.0 鉴权调用，仅支持授权用户为商业版、企业版、教育版。所需权限点为：查看会议录制（VIEW_VIDEO） 或 管理会议录制（MANAGE_VIDEO）。
 **接口请求方法：** GET
 **接口请求域名：**
 ```plaintext
 https://api.meeting.qq.com/v1/records/transcripts/details
 ```
-
-
-
 
 ## 请求参数
 
@@ -597,4 +594,3 @@ GET https://api.meeting.qq.com/v1/records/transcripts/details?record_file_id=146
 }
 
 ```
-
