--- a/product/企业协同/腾讯会议/API 文档/REST APIs/企业云录制管理/查询会议纪要段落信息.md
+++ b/product/企业协同/腾讯会议/API 文档/REST APIs/企业云录制管理/查询会议纪要段落信息.md
@@ -1,5 +1,5 @@
 ## 接口描述
-**描述：**获取云录制会议纪要的段落信息（段落总数、段落 ID）。暂不支持 OAuth 2.0 鉴权访问。
+**描述：**获取云录制会议纪要的段落信息（段落总数、段落 ID）。支持 OAuth2.0 鉴权调用，仅支持授权用户为商业版、企业版、教育版。所需权限点为：查看会议录制（VIEW_VIDEO） 或 管理会议录制（MANAGE_VIDEO）。
 **接口请求方法：** GET
 **接口请求域名：**
 ```plaintext
