--- a/product/区块链/TBaaS/用户指南/事件中心.md
+++ b/product/区块链/TBaaS/用户指南/事件中心.md
@@ -96,9 +96,10 @@
 >!
 >- 修改投票率需要通过通道内的组织按照原投票准入率规律进行投票，投票通过即可生效。请谨慎修改！
 >- 修改准入规则事件在同一通道内，同一时间，只能出现一次。
->
->选择左侧导航栏中的**事件中心**，查看事件的进展或者处理事件。
->发起邀请者可在 “事件中心” 页面中查看事件的进展，被邀请者可以根据实际需求，在 “事件中心”—“我待办的” 页面中，选择同意或者拒绝该事件。
+
+
+1. 选择左侧导航栏中的**事件中心**，查看事件的进展或者处理事件。
+2. 发起邀请者可在 “事件中心” 页面中查看事件的进展，被邀请者可以根据实际需求，在 “事件中心”—“我待办的” 页面中，选择同意或者拒绝该事件。
 
 
 
