--- a/product/数据库/云数据库 CynosDB/产品简介/地域和可用区.md
+++ b/product/数据库/云数据库 CynosDB/产品简介/地域和可用区.md
@@ -47,6 +47,9 @@
 <td>北京五区<br>ap-beijing-5</td></tr>
 <tr>
 <td>北京七区<br>ap-beijing-7</td></tr>
+<tr>
+<td rowspan="1">华北地区（北京金融）<br>ap-beijing-fsi</td>
+<td>北京金融一区<br>ap-beijing-fsi-1</td></tr>
 <td rowspan="1">华东地区（南京）<br>ap-nanjing</td>
 <td>南京一区<br>ap-nanjing-1</td></tr>
 <td rowspan="1">港澳台地区（中国香港）<br>ap-hongkong</td>
